testdata/myc-config_dump.json
{
 "configs": [
  {
   "@type": "type.googleapis.com/envoy.admin.v2alpha.BootstrapConfigDump",
   "bootstrap": {
    "node": {
     "id": "sidecar~172.30.79.10~myclient-c58c9c46d-nwz8v.default~default.svc.cluster.local",
     "cluster": "myclient.default",
     "metadata": {
      "ISTIO_PROXY_VERSION": "1.1.0",
      "ISTIO_PROXY_SHA": "istio-proxy:4d8eb98dee59b8cd57962230c0430fa2a486c05e",
      "ISTIO_VERSION": "release-1.1-20181112-21-12",
      "kubernetes.io/psp": "ibm-privileged-psp",
      "app": "myclient",
      "pod-template-hash": "714757028",
      "POD_NAME": "myclient-c58c9c46d-nwz8v",
      "INTERCEPTION_MODE": "REDIRECT",
      "istio": "sidecar"
     },
     "build_version": "4d8eb98dee59b8cd57962230c0430fa2a486c05e/1.9.0-dev/Clean/RELEASE"
    },
    "static_resources": {
     "listeners": [
      {
       "address": {
        "socket_address": {
         "address": "0.0.0.0",
         "port_value": 15090
        }
       },
       "filter_chains": [
        {
         "filters": [
          {
           "name": "envoy.http_connection_manager",
           "config": {
            "route_config": {
             "virtual_hosts": [
              {
               "routes": [
                {
                 "match": {
                  "prefix": "/stats/prometheus"
                 },
                 "route": {
                  "cluster": "prometheus_stats"
                 }
                }
               ],
               "domains": [
                "*"
               ],
               "name": "backend"
              }
             ]
            },
            "codec_type": "AUTO",
            "http_filters": {
             "name": "envoy.router"
            },
            "stat_prefix": "stats"
           }
          }
         ]
        }
       ]
      }
     ],
     "clusters": [
      {
       "name": "prometheus_stats",
       "connect_timeout": "0.250s",
       "hosts": [
        {
         "socket_address": {
          "address": "127.0.0.1",
          "port_value": 15000
         }
        }
       ]
      },
      {
       "name": "xds-grpc",
       "type": "STRICT_DNS",
       "connect_timeout": "10s",
       "hosts": [
        {
         "socket_address": {
          "address": "istio-pilot.istio-system",
          "port_value": 15011
         }
        }
       ],
       "circuit_breakers": {
        "thresholds": [
         {
          "max_connections": 100000,
          "max_pending_requests": 100000,
          "max_requests": 100000
         },
         {
          "priority": "HIGH",
          "max_connections": 100000,
          "max_pending_requests": 100000,
          "max_requests": 100000
         }
        ]
       },
       "tls_context": {
        "common_tls_context": {
         "tls_certificates": [
          {
           "certificate_chain": {
            "filename": "/etc/certs/cert-chain.pem"
           },
           "private_key": {
            "filename": "/etc/certs/key.pem"
           }
          }
         ],
         "validation_context": {
          "trusted_ca": {
           "filename": "/etc/certs/root-cert.pem"
          },
          "verify_subject_alt_name": [
           "spiffe://cluster.local/ns/istio-system/sa/istio-pilot-service-account"
          ]
         },
         "alpn_protocols": [
          "h2"
         ]
        }
       },
       "http2_protocol_options": {},
       "upstream_connection_options": {
        "tcp_keepalive": {
         "keepalive_time": 300
        }
       }
      },
      {
       "name": "zipkin",
       "type": "STRICT_DNS",
       "connect_timeout": "1s",
       "hosts": [
        {
         "socket_address": {
          "address": "zipkin.istio-system",
          "port_value": 9411
         }
        }
       ]
      }
     ]
    },
    "dynamic_resources": {
     "lds_config": {
      "ads": {}
     },
     "cds_config": {
      "ads": {}
     },
     "ads_config": {
      "api_type": "GRPC",
      "grpc_services": [
       {
        "envoy_grpc": {
         "cluster_name": "xds-grpc"
        }
       }
      ]
     }
    },
    "tracing": {
     "http": {
      "name": "envoy.zipkin",
      "config": {
       "collector_cluster": "zipkin"
      }
     }
    },
    "admin": {
     "access_log_path": "/dev/null",
     "address": {
      "socket_address": {
       "address": "127.0.0.1",
       "port_value": 15000
      }
     }
    },
    "stats_config": {
     "stats_tags": [
      {
       "tag_name": "cluster_name",
       "regex": "^cluster\\.((.+?(\\..+?\\.svc\\.cluster\\.local)?)\\.)"
      },
      {
       "tag_name": "tcp_prefix",
       "regex": "^tcp\\.((.*?)\\.)\\w+?$"
      },
      {
       "tag_name": "response_code",
       "regex": "_rq(_(\\d{3}))$"
      },
      {
       "tag_name": "response_code_class",
       "regex": "_rq(_(\\dxx))$"
      },
      {
       "tag_name": "http_conn_manager_listener_prefix",
       "regex": "^listener(?=\\.).*?\\.http\\.(((?:[_.[:digit:]]*|[_\\[\\]aAbBcCdDeEfF[:digit:]]*))\\.)"
      },
      {
       "tag_name": "http_conn_manager_prefix",
       "regex": "^http\\.(((?:[_.[:digit:]]*|[_\\[\\]aAbBcCdDeEfF[:digit:]]*))\\.)"
      },
      {
       "tag_name": "listener_address",
       "regex": "^listener\\.(((?:[_.[:digit:]]*|[_\\[\\]aAbBcCdDeEfF[:digit:]]*))\\.)"
      }
     ],
     "use_all_default_tags": false
    }
   },
   "last_updated": "2018-11-13T14:36:30.019Z"
  },
  {
   "@type": "type.googleapis.com/envoy.admin.v2alpha.ClustersConfigDump",
   "version_info": "2018-11-13T15:48:05Z/24",
   "static_clusters": [
    {
     "cluster": {
      "name": "prometheus_stats",
      "connect_timeout": "0.250s",
      "hosts": [
       {
        "socket_address": {
         "address": "127.0.0.1",
         "port_value": 15000
        }
       }
      ]
     },
     "last_updated": "2018-11-13T14:36:30.022Z"
    },
    {
     "cluster": {
      "name": "xds-grpc",
      "type": "STRICT_DNS",
      "connect_timeout": "10s",
      "hosts": [
       {
        "socket_address": {
         "address": "istio-pilot.istio-system",
         "port_value": 15011
        }
       }
      ],
      "circuit_breakers": {
       "thresholds": [
        {
         "max_connections": 100000,
         "max_pending_requests": 100000,
         "max_requests": 100000
        },
        {
         "priority": "HIGH",
         "max_connections": 100000,
         "max_pending_requests": 100000,
         "max_requests": 100000
        }
       ]
      },
      "tls_context": {
       "common_tls_context": {
        "tls_certificates": [
         {
          "certificate_chain": {
           "filename": "/etc/certs/cert-chain.pem"
          },
          "private_key": {
           "filename": "/etc/certs/key.pem"
          }
         }
        ],
        "validation_context": {
         "trusted_ca": {
          "filename": "/etc/certs/root-cert.pem"
         },
         "verify_subject_alt_name": [
          "spiffe://cluster.local/ns/istio-system/sa/istio-pilot-service-account"
         ]
        },
        "alpn_protocols": [
         "h2"
        ]
       }
      },
      "http2_protocol_options": {},
      "upstream_connection_options": {
       "tcp_keepalive": {
        "keepalive_time": 300
       }
      }
     },
     "last_updated": "2018-11-13T14:36:30.024Z"
    },
    {
     "cluster": {
      "name": "zipkin",
      "type": "STRICT_DNS",
      "connect_timeout": "1s",
      "hosts": [
       {
        "socket_address": {
         "address": "zipkin.istio-system",
         "port_value": 9411
        }
       }
      ]
     },
     "last_updated": "2018-11-13T14:36:30.024Z"
    }
   ],
   "dynamic_active_clusters": [
    {
     "version_info": "2018-11-13T14:36:19Z/12",
     "cluster": {
      "name": "BlackHoleCluster",
      "connect_timeout": "1s"
     },
     "last_updated": "2018-11-13T14:36:31.530Z"
    },
    {
     "version_info": "2018-11-13T14:36:19Z/12",
     "cluster": {
      "name": "PassthroughCluster",
      "type": "ORIGINAL_DST",
      "connect_timeout": "1s",
      "lb_policy": "ORIGINAL_DST_LB"
     },
     "last_updated": "2018-11-13T14:36:31.530Z"
    },
    {
     "version_info": "2018-11-13T14:36:19Z/12",
     "cluster": {
      "name": "inbound|15020||mgmtCluster",
      "connect_timeout": "1s",
      "hosts": [
       {
        "socket_address": {
         "address": "127.0.0.1",
         "port_value": 15020
        }
       }
      ],
      "circuit_breakers": {
       "thresholds": [
        {}
       ]
      }
     },
     "last_updated": "2018-11-13T14:36:31.529Z"
    },
    {
     "version_info": "2018-11-13T14:36:19Z/12",
     "cluster": {
      "name": "inbound|80||myclient.default.svc.cluster.local",
      "connect_timeout": "1s",
      "hosts": [
       {
        "socket_address": {
         "address": "127.0.0.1",
         "port_value": 80
        }
       }
      ],
      "circuit_breakers": {
       "thresholds": [
        {}
       ]
      }
     },
     "last_updated": "2018-11-13T14:36:31.529Z"
    },
    {
     "version_info": "2018-11-13T14:36:19Z/12",
     "cluster": {
      "name": "outbound|15004||istio-policy.istio-system.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {}
       },
       "service_name": "outbound|15004||istio-policy.istio-system.svc.cluster.local"
      },
      "connect_timeout": "1s",
      "circuit_breakers": {
       "thresholds": [
        {}
       ]
      },
      "tls_context": {
       "common_tls_context": {
        "tls_certificates": [
         {
          "certificate_chain": {
           "filename": "/etc/certs/cert-chain.pem"
          },
          "private_key": {
           "filename": "/etc/certs/key.pem"
          }
         }
        ],
        "validation_context": {
         "trusted_ca": {
          "filename": "/etc/certs/root-cert.pem"
         },
         "verify_subject_alt_name": [
          "spiffe://cluster.local/ns/istio-system/sa/istio-mixer-service-account"
         ]
        },
        "alpn_protocols": [
         "istio",
         "h2"
        ]
       },
       "sni": "outbound_.15004_._.istio-policy.istio-system.svc.cluster.local"
      },
      "http2_protocol_options": {
       "max_concurrent_streams": 1073741824
      }
     },
     "last_updated": "2018-11-13T14:36:31.517Z"
    },
    {
     "version_info": "2018-11-13T14:36:19Z/12",
     "cluster": {
      "name": "outbound|15004||istio-telemetry.istio-system.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {}
       },
       "service_name": "outbound|15004||istio-telemetry.istio-system.svc.cluster.local"
      },
      "connect_timeout": "1s",
      "circuit_breakers": {
       "thresholds": [
        {}
       ]
      },
      "tls_context": {
       "common_tls_context": {
        "tls_certificates": [
         {
          "certificate_chain": {
           "filename": "/etc/certs/cert-chain.pem"
          },
          "private_key": {
           "filename": "/etc/certs/key.pem"
          }
         }
        ],
        "validation_context": {
         "trusted_ca": {
          "filename": "/etc/certs/root-cert.pem"
         },
         "verify_subject_alt_name": [
          "spiffe://cluster.local/ns/istio-system/sa/istio-mixer-service-account"
         ]
        },
        "alpn_protocols": [
         "istio",
         "h2"
        ]
       },
       "sni": "outbound_.15004_._.istio-telemetry.istio-system.svc.cluster.local"
      },
      "http2_protocol_options": {
       "max_concurrent_streams": 1073741824
      }
     },
     "last_updated": "2018-11-13T14:36:31.520Z"
    },
    {
     "version_info": "2018-11-13T14:36:19Z/12",
     "cluster": {
      "name": "outbound|15010||istio-pilot.istio-system.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {}
       },
       "service_name": "outbound|15010||istio-pilot.istio-system.svc.cluster.local"
      },
      "connect_timeout": "1s",
      "circuit_breakers": {
       "thresholds": [
        {}
       ]
      },
      "http2_protocol_options": {
       "max_concurrent_streams": 1073741824
      }
     },
     "last_updated": "2018-11-13T14:36:31.525Z"
    },
    {
     "version_info": "2018-11-13T14:36:19Z/12",
     "cluster": {
      "name": "outbound|15011||istio-pilot.istio-system.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {}
       },
       "service_name": "outbound|15011||istio-pilot.istio-system.svc.cluster.local"
      },
      "connect_timeout": "1s",
      "circuit_breakers": {
       "thresholds": [
        {}
       ]
      }
     },
     "last_updated": "2018-11-13T14:36:31.525Z"
    },
    {
     "version_info": "2018-11-13T14:36:19Z/12",
     "cluster": {
      "name": "outbound|15029||istio-ingressgateway.istio-system.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {}
       },
       "service_name": "outbound|15029||istio-ingressgateway.istio-system.svc.cluster.local"
      },
      "connect_timeout": "1s",
      "circuit_breakers": {
       "thresholds": [
        {}
       ]
      }
     },
     "last_updated": "2018-11-13T14:36:31.512Z"
    },
    {
     "version_info": "2018-11-13T14:36:19Z/12",
     "cluster": {
      "name": "outbound|15030||istio-ingressgateway.istio-system.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {}
       },
       "service_name": "outbound|15030||istio-ingressgateway.istio-system.svc.cluster.local"
      },
      "connect_timeout": "1s",
      "circuit_breakers": {
       "thresholds": [
        {}
       ]
      },
      "http2_protocol_options": {
       "max_concurrent_streams": 1073741824
      }
     },
     "last_updated": "2018-11-13T14:36:31.512Z"
    },
    {
     "version_info": "2018-11-13T14:36:19Z/12",
     "cluster": {
      "name": "outbound|15031||istio-ingressgateway.istio-system.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {}
       },
       "service_name": "outbound|15031||istio-ingressgateway.istio-system.svc.cluster.local"
      },
      "connect_timeout": "1s",
      "circuit_breakers": {
       "thresholds": [
        {}
       ]
      },
      "http2_protocol_options": {
       "max_concurrent_streams": 1073741824
      }
     },
     "last_updated": "2018-11-13T14:36:31.513Z"
    },
    {
     "version_info": "2018-11-13T14:36:19Z/12",
     "cluster": {
      "name": "outbound|15032||istio-ingressgateway.istio-system.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {}
       },
       "service_name": "outbound|15032||istio-ingressgateway.istio-system.svc.cluster.local"
      },
      "connect_timeout": "1s",
      "circuit_breakers": {
       "thresholds": [
        {}
       ]
      },
      "http2_protocol_options": {
       "max_concurrent_streams": 1073741824
      }
     },
     "last_updated": "2018-11-13T14:36:31.514Z"
    },
    {
     "version_info": "2018-11-13T14:36:19Z/12",
     "cluster": {
      "name": "outbound|15443||istio-egressgateway.istio-system.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {}
       },
       "service_name": "outbound|15443||istio-egressgateway.istio-system.svc.cluster.local"
      },
      "connect_timeout": "1s",
      "circuit_breakers": {
       "thresholds": [
        {}
       ]
      }
     },
     "last_updated": "2018-11-13T14:36:31.506Z"
    },
    {
     "version_info": "2018-11-13T14:36:19Z/12",
     "cluster": {
      "name": "outbound|15443||istio-ingressgateway.istio-system.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {}
       },
       "service_name": "outbound|15443||istio-ingressgateway.istio-system.svc.cluster.local"
      },
      "connect_timeout": "1s",
      "circuit_breakers": {
       "thresholds": [
        {}
       ]
      }
     },
     "last_updated": "2018-11-13T14:36:31.515Z"
    },
    {
     "version_info": "2018-11-13T14:36:19Z/12",
     "cluster": {
      "name": "outbound|31400||istio-ingressgateway.istio-system.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {}
       },
       "service_name": "outbound|31400||istio-ingressgateway.istio-system.svc.cluster.local"
      },
      "connect_timeout": "1s",
      "circuit_breakers": {
       "thresholds": [
        {}
       ]
      }
     },
     "last_updated": "2018-11-13T14:36:31.511Z"
    },
    {
     "version_info": "2018-11-13T14:36:19Z/12",
     "cluster": {
      "name": "outbound|42422||istio-telemetry.istio-system.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {}
       },
       "service_name": "outbound|42422||istio-telemetry.istio-system.svc.cluster.local"
      },
      "connect_timeout": "1s",
      "max_requests_per_connection": 10000,
      "circuit_breakers": {
       "thresholds": [
        {
         "max_requests": 10000
        }
       ]
      }
     },
     "last_updated": "2018-11-13T14:36:31.522Z"
    },
    {
     "version_info": "2018-11-13T14:36:19Z/12",
     "cluster": {
      "name": "outbound|443||istio-egressgateway.istio-system.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {}
       },
       "service_name": "outbound|443||istio-egressgateway.istio-system.svc.cluster.local"
      },
      "connect_timeout": "1s",
      "circuit_breakers": {
       "thresholds": [
        {}
       ]
      }
     },
     "last_updated": "2018-11-13T14:36:31.506Z"
    },
    {
     "version_info": "2018-11-13T14:36:19Z/12",
     "cluster": {
      "name": "outbound|443||istio-galley.istio-system.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {}
       },
       "service_name": "outbound|443||istio-galley.istio-system.svc.cluster.local"
      },
      "connect_timeout": "1s",
      "circuit_breakers": {
       "thresholds": [
        {}
       ]
      }
     },
     "last_updated": "2018-11-13T14:36:31.507Z"
    },
    {
     "version_info": "2018-11-13T14:36:19Z/12",
     "cluster": {
      "name": "outbound|443||istio-ingressgateway.istio-system.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {}
       },
       "service_name": "outbound|443||istio-ingressgateway.istio-system.svc.cluster.local"
      },
      "connect_timeout": "1s",
      "circuit_breakers": {
       "thresholds": [
        {}
       ]
      }
     },
     "last_updated": "2018-11-13T14:36:31.510Z"
    },
    {
     "version_info": "2018-11-13T14:36:19Z/12",
     "cluster": {
      "name": "outbound|443||istio-sidecar-injector.istio-system.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {}
       },
       "service_name": "outbound|443||istio-sidecar-injector.istio-system.svc.cluster.local"
      },
      "connect_timeout": "1s",
      "circuit_breakers": {
       "thresholds": [
        {}
       ]
      }
     },
     "last_updated": "2018-11-13T14:36:31.527Z"
    },
    {
     "version_info": "2018-11-13T14:36:19Z/12",
     "cluster": {
      "name": "outbound|443||kubernetes.default.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {}
       },
       "service_name": "outbound|443||kubernetes.default.svc.cluster.local"
      },
      "connect_timeout": "1s",
      "circuit_breakers": {
       "thresholds": [
        {}
       ]
      }
     },
     "last_updated": "2018-11-13T14:36:31.498Z"
    },
    {
     "version_info": "2018-11-13T14:36:19Z/12",
     "cluster": {
      "name": "outbound|53||istiocoredns.istio-system.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {}
       },
       "service_name": "outbound|53||istiocoredns.istio-system.svc.cluster.local"
      },
      "connect_timeout": "1s",
      "circuit_breakers": {
       "thresholds": [
        {}
       ]
      }
     },
     "last_updated": "2018-11-13T14:36:31.522Z"
    },
    {
     "version_info": "2018-11-13T14:36:19Z/12",
     "cluster": {
      "name": "outbound|8060||istio-citadel.istio-system.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {}
       },
       "service_name": "outbound|8060||istio-citadel.istio-system.svc.cluster.local"
      },
      "connect_timeout": "1s",
      "circuit_breakers": {
       "thresholds": [
        {}
       ]
      },
      "http2_protocol_options": {
       "max_concurrent_streams": 1073741824
      }
     },
     "last_updated": "2018-11-13T14:36:31.523Z"
    },
    {
     "version_info": "2018-11-13T14:36:19Z/12",
     "cluster": {
      "name": "outbound|8080||istio-pilot.istio-system.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {}
       },
       "service_name": "outbound|8080||istio-pilot.istio-system.svc.cluster.local"
      },
      "connect_timeout": "1s",
      "circuit_breakers": {
       "thresholds": [
        {}
       ]
      }
     },
     "last_updated": "2018-11-13T14:36:31.526Z"
    },
    {
     "version_info": "2018-11-13T14:36:19Z/12",
     "cluster": {
      "name": "outbound|80||headers.default.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {}
       },
       "service_name": "outbound|80||headers.default.svc.cluster.local"
      },
      "connect_timeout": "1s",
      "circuit_breakers": {
       "thresholds": [
        {}
       ]
      }
     },
     "last_updated": "2018-11-13T14:36:31.500Z"
    },
    {
     "version_info": "2018-11-13T14:36:19Z/12",
     "cluster": {
      "name": "outbound|80||istio-egressgateway.istio-system.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {}
       },
       "service_name": "outbound|80||istio-egressgateway.istio-system.svc.cluster.local"
      },
      "connect_timeout": "1s",
      "circuit_breakers": {
       "thresholds": [
        {}
       ]
      },
      "http2_protocol_options": {
       "max_concurrent_streams": 1073741824
      }
     },
     "last_updated": "2018-11-13T14:36:31.505Z"
    },
    {
     "version_info": "2018-11-13T14:36:19Z/12",
     "cluster": {
      "name": "outbound|80||istio-ingressgateway.istio-system.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {}
       },
       "service_name": "outbound|80||istio-ingressgateway.istio-system.svc.cluster.local"
      },
      "connect_timeout": "1s",
      "circuit_breakers": {
       "thresholds": [
        {}
       ]
      },
      "http2_protocol_options": {
       "max_concurrent_streams": 1073741824
      }
     },
     "last_updated": "2018-11-13T14:36:31.509Z"
    },
    {
     "version_info": "2018-11-13T14:36:19Z/12",
     "cluster": {
      "name": "outbound|80||myclient.default.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {}
       },
       "service_name": "outbound|80||myclient.default.svc.cluster.local"
      },
      "connect_timeout": "1s",
      "circuit_breakers": {
       "thresholds": [
        {}
       ]
      }
     },
     "last_updated": "2018-11-13T14:36:31.502Z"
    },
    {
     "version_info": "2018-11-13T15:14:57Z/17",
     "cluster": {
      "name": "outbound|80||myserver.default.global",
      "type": "STRICT_DNS",
      "connect_timeout": "1s",
      "hosts": [
       {
        "socket_address": {
         "address": "169.62.214.226",
         "port_value": 15443
        }
       }
      ],
      "circuit_breakers": {
       "thresholds": [
        {}
       ]
      },
      "tls_context": {
       "common_tls_context": {
        "tls_certificates": [
         {
          "certificate_chain": {
           "filename": "/etc/certs/cert-chain.pem"
          },
          "private_key": {
           "filename": "/etc/certs/key.pem"
          }
         }
        ],
        "validation_context": {
         "trusted_ca": {
          "filename": "/etc/certs/root-cert.pem"
         }
        },
        "alpn_protocols": [
         "istio"
        ]
       },
       "sni": "outbound_.80_._.myserver.default.global"
      },
      "dns_lookup_family": "V4_ONLY"
     },
     "last_updated": "2018-11-13T15:14:57.229Z"
    },
    {
     "version_info": "2018-11-13T14:36:19Z/12",
     "cluster": {
      "name": "outbound|9080||details.default.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {}
       },
       "service_name": "outbound|9080||details.default.svc.cluster.local"
      },
      "connect_timeout": "1s",
      "circuit_breakers": {
       "thresholds": [
        {}
       ]
      }
     },
     "last_updated": "2018-11-13T14:36:31.502Z"
    },
    {
     "version_info": "2018-11-13T14:36:19Z/12",
     "cluster": {
      "name": "outbound|9080||productpage.default.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {}
       },
       "service_name": "outbound|9080||productpage.default.svc.cluster.local"
      },
      "connect_timeout": "1s",
      "circuit_breakers": {
       "thresholds": [
        {}
       ]
      }
     },
     "last_updated": "2018-11-13T14:36:31.503Z"
    },
    {
     "version_info": "2018-11-13T14:36:19Z/12",
     "cluster": {
      "name": "outbound|9080||reviews.default.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {}
       },
       "service_name": "outbound|9080||reviews.default.svc.cluster.local"
      },
      "connect_timeout": "1s",
      "circuit_breakers": {
       "thresholds": [
        {}
       ]
      }
     },
     "last_updated": "2018-11-13T14:36:31.504Z"
    },
    {
     "version_info": "2018-11-13T14:36:19Z/12",
     "cluster": {
      "name": "outbound|9090||prometheus.istio-system.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {}
       },
       "service_name": "outbound|9090||prometheus.istio-system.svc.cluster.local"
      },
      "connect_timeout": "1s",
      "circuit_breakers": {
       "thresholds": [
        {}
       ]
      }
     },
     "last_updated": "2018-11-13T14:36:31.528Z"
    },
    {
     "version_info": "2018-11-13T14:36:19Z/12",
     "cluster": {
      "name": "outbound|9091||istio-policy.istio-system.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {}
       },
       "service_name": "outbound|9091||istio-policy.istio-system.svc.cluster.local"
      },
      "connect_timeout": "1s",
      "max_requests_per_connection": 10000,
      "circuit_breakers": {
       "thresholds": [
        {
         "max_requests": 10000
        }
       ]
      },
      "http2_protocol_options": {
       "max_concurrent_streams": 1073741824
      }
     },
     "last_updated": "2018-11-13T14:36:31.515Z"
    },
    {
     "version_info": "2018-11-13T14:36:19Z/12",
     "cluster": {
      "name": "outbound|9091||istio-telemetry.istio-system.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {}
       },
       "service_name": "outbound|9091||istio-telemetry.istio-system.svc.cluster.local"
      },
      "connect_timeout": "1s",
      "max_requests_per_connection": 10000,
      "circuit_breakers": {
       "thresholds": [
        {
         "max_requests": 10000
        }
       ]
      },
      "http2_protocol_options": {
       "max_concurrent_streams": 1073741824
      }
     },
     "last_updated": "2018-11-13T14:36:31.519Z"
    },
    {
     "version_info": "2018-11-13T14:36:19Z/12",
     "cluster": {
      "name": "outbound|9093||istio-citadel.istio-system.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {}
       },
       "service_name": "outbound|9093||istio-citadel.istio-system.svc.cluster.local"
      },
      "connect_timeout": "1s",
      "circuit_breakers": {
       "thresholds": [
        {}
       ]
      }
     },
     "last_updated": "2018-11-13T14:36:31.524Z"
    },
    {
     "version_info": "2018-11-13T14:36:19Z/12",
     "cluster": {
      "name": "outbound|9093||istio-galley.istio-system.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {}
       },
       "service_name": "outbound|9093||istio-galley.istio-system.svc.cluster.local"
      },
      "connect_timeout": "1s",
      "circuit_breakers": {
       "thresholds": [
        {}
       ]
      }
     },
     "last_updated": "2018-11-13T14:36:31.508Z"
    },
    {
     "version_info": "2018-11-13T14:36:19Z/12",
     "cluster": {
      "name": "outbound|9093||istio-pilot.istio-system.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {}
       },
       "service_name": "outbound|9093||istio-pilot.istio-system.svc.cluster.local"
      },
      "connect_timeout": "1s",
      "circuit_breakers": {
       "thresholds": [
        {}
       ]
      }
     },
     "last_updated": "2018-11-13T14:36:31.527Z"
    },
    {
     "version_info": "2018-11-13T14:36:19Z/12",
     "cluster": {
      "name": "outbound|9093||istio-policy.istio-system.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {}
       },
       "service_name": "outbound|9093||istio-policy.istio-system.svc.cluster.local"
      },
      "connect_timeout": "1s",
      "max_requests_per_connection": 10000,
      "circuit_breakers": {
       "thresholds": [
        {
         "max_requests": 10000
        }
       ]
      }
     },
     "last_updated": "2018-11-13T14:36:31.518Z"
    },
    {
     "version_info": "2018-11-13T14:36:19Z/12",
     "cluster": {
      "name": "outbound|9093||istio-telemetry.istio-system.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {}
       },
       "service_name": "outbound|9093||istio-telemetry.istio-system.svc.cluster.local"
      },
      "connect_timeout": "1s",
      "max_requests_per_connection": 10000,
      "circuit_breakers": {
       "thresholds": [
        {
         "max_requests": 10000
        }
       ]
      }
     },
     "last_updated": "2018-11-13T14:36:31.521Z"
    },
    {
     "version_info": "2018-11-13T14:36:19Z/12",
     "cluster": {
      "name": "outbound|9901||istio-galley.istio-system.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {}
       },
       "service_name": "outbound|9901||istio-galley.istio-system.svc.cluster.local"
      },
      "connect_timeout": "1s",
      "circuit_breakers": {
       "thresholds": [
        {}
       ]
      },
      "http2_protocol_options": {
       "max_concurrent_streams": 1073741824
      }
     },
     "last_updated": "2018-11-13T14:36:31.508Z"
    }
   ]
  },
  {
   "@type": "type.googleapis.com/envoy.admin.v2alpha.ListenersConfigDump",
   "version_info": "2018-11-13T15:48:05Z/24",
   "static_listeners": [
    {
     "listener": {
      "address": {
       "socket_address": {
        "address": "0.0.0.0",
        "port_value": 15090
       }
      },
      "filter_chains": [
       {
        "filters": [
         {
          "name": "envoy.http_connection_manager",
          "config": {
           "route_config": {
            "virtual_hosts": [
             {
              "routes": [
               {
                "route": {
                 "cluster": "prometheus_stats"
                },
                "match": {
                 "prefix": "/stats/prometheus"
                }
               }
              ],
              "domains": [
               "*"
              ],
              "name": "backend"
             }
            ]
           },
           "codec_type": "AUTO",
           "http_filters": {
            "name": "envoy.router"
           },
           "stat_prefix": "stats"
          }
         }
        ]
       }
      ]
     },
     "last_updated": "2018-11-13T14:36:30.028Z"
    }
   ],
   "dynamic_active_listeners": [
    {
     "version_info": "2018-11-13T14:36:19Z/12",
     "listener": {
      "name": "172.30.79.10_80",
      "address": {
       "socket_address": {
        "address": "172.30.79.10",
        "port_value": 80
       }
      },
      "filter_chains": [
       {
        "filter_chain_match": {
         "application_protocols": [
          "istio"
         ]
        },
        "tls_context": {
         "common_tls_context": {
          "tls_certificates": [
           {
            "certificate_chain": {
             "filename": "/etc/certs/cert-chain.pem"
            },
            "private_key": {
             "filename": "/etc/certs/key.pem"
            }
           }
          ],
          "validation_context": {
           "trusted_ca": {
            "filename": "/etc/certs/root-cert.pem"
           }
          },
          "alpn_protocols": [
           "h2",
           "http/1.1"
          ]
         },
         "require_client_certificate": true
        },
        "filters": [
         {
          "name": "envoy.http_connection_manager",
          "config": {
           "use_remote_address": false,
           "stat_prefix": "172.30.79.10_80",
           "generate_request_id": true,
           "stream_idle_timeout": "0s",
           "upgrade_configs": [
            {
             "upgrade_type": "websocket"
            }
           ],
           "forward_client_cert_details": "APPEND_FORWARD",
           "access_log": [
            {
             "name": "envoy.file_access_log",
             "config": {
              "path": "/dev/stdout",
              "format": "[%START_TIME%] \"%REQ(:METHOD)% %REQ(X-ENVOY-ORIGINAL-PATH?:PATH)% %PROTOCOL%\" %RESPONSE_CODE% %RESPONSE_FLAGS% %BYTES_RECEIVED% %BYTES_SENT% %DURATION% %RESP(X-ENVOY-UPSTREAM-SERVICE-TIME)% \"%REQ(X-FORWARDED-FOR)%\" \"%REQ(USER-AGENT)%\" \"%REQ(X-REQUEST-ID)%\" \"%REQ(:AUTHORITY)%\" \"%UPSTREAM_HOST%\" %UPSTREAM_CLUSTER% %UPSTREAM_LOCAL_ADDRESS% %DOWNSTREAM_LOCAL_ADDRESS% %DOWNSTREAM_REMOTE_ADDRESS% %REQUESTED_SERVER_NAME%\n"
             }
            }
           ],
           "http_filters": [
            {
             "name": "istio_authn",
             "config": {
              "policy": {
               "peers": [
                {
                 "mtls": {
                  "mode": "PERMISSIVE"
                 }
                }
               ]
              }
             }
            },
            {
             "name": "mixer",
             "config": {
              "default_destination_service": "default",
              "mixer_attributes": {
               "attributes": {
                "destination.port": {
                 "int64_value": "80"
                },
                "context.reporter.uid": {
                 "string_value": "kubernetes://myclient-c58c9c46d-nwz8v.default"
                },
                "destination.namespace": {
                 "string_value": "default"
                },
                "destination.ip": {
                 "bytes_value": "AAAAAAAAAAAAAP//rB5PCg=="
                },
                "destination.uid": {
                 "string_value": "kubernetes://myclient-c58c9c46d-nwz8v.default"
                },
                "context.reporter.kind": {
                 "string_value": "inbound"
                }
               }
              },
              "transport": {
               "check_cluster": "outbound|15004||istio-policy.istio-system.svc.cluster.local",
               "network_fail_policy": {
                "policy": "FAIL_CLOSE"
               },
               "report_cluster": "outbound|15004||istio-telemetry.istio-system.svc.cluster.local",
               "attributes_for_mixer_proxy": {
                "attributes": {
                 "source.uid": {
                  "string_value": "kubernetes://myclient-c58c9c46d-nwz8v.default"
                 }
                }
               }
              },
              "service_configs": {
               "default": {}
              }
             }
            },
            {
             "name": "envoy.cors"
            },
            {
             "name": "envoy.fault"
            },
            {
             "name": "envoy.router"
            }
           ],
           "tracing": {
            "overall_sampling": {
             "value": 100
            },
            "random_sampling": {
             "value": 100
            },
            "client_sampling": {
             "value": 100
            }
           },
           "route_config": {
            "name": "inbound|80||myclient.default.svc.cluster.local",
            "validate_clusters": false,
            "virtual_hosts": [
             {
              "routes": [
               {
                "decorator": {
                 "operation": "myclient.default.svc.cluster.local:80/*"
                },
                "route": {
                 "cluster": "inbound|80||myclient.default.svc.cluster.local",
                 "timeout": "0s",
                 "max_grpc_timeout": "0s"
                },
                "per_filter_config": {
                 "mixer": {
                  "mixer_attributes": {
                   "attributes": {
                    "destination.service.namespace": {
                     "string_value": "default"
                    },
                    "destination.service.name": {
                     "string_value": "myclient"
                    },
                    "destination.service.host": {
                     "string_value": "myclient.default.svc.cluster.local"
                    },
                    "destination.service.uid": {
                     "string_value": "istio://default/services/myclient"
                    }
                   }
                  }
                 }
                },
                "match": {
                 "prefix": "/"
                }
               }
              ],
              "domains": [
               "*"
              ],
              "name": "inbound|http|80"
             }
            ]
           }
          }
         }
        ]
       },
       {
        "filter_chain_match": {},
        "filters": [
         {
          "name": "envoy.http_connection_manager",
          "config": {
           "route_config": {
            "validate_clusters": false,
            "virtual_hosts": [
             {
              "routes": [
               {
                "decorator": {
                 "operation": "myclient.default.svc.cluster.local:80/*"
                },
                "route": {
                 "cluster": "inbound|80||myclient.default.svc.cluster.local",
                 "timeout": "0s",
                 "max_grpc_timeout": "0s"
                },
                "per_filter_config": {
                 "mixer": {
                  "mixer_attributes": {
                   "attributes": {
                    "destination.service.namespace": {
                     "string_value": "default"
                    },
                    "destination.service.name": {
                     "string_value": "myclient"
                    },
                    "destination.service.host": {
                     "string_value": "myclient.default.svc.cluster.local"
                    },
                    "destination.service.uid": {
                     "string_value": "istio://default/services/myclient"
                    }
                   }
                  }
                 }
                },
                "match": {
                 "prefix": "/"
                }
               }
              ],
              "domains": [
               "*"
              ],
              "name": "inbound|http|80"
             }
            ],
            "name": "inbound|80||myclient.default.svc.cluster.local"
           },
           "tracing": {
            "overall_sampling": {
             "value": 100
            },
            "random_sampling": {
             "value": 100
            },
            "client_sampling": {
             "value": 100
            }
           },
           "use_remote_address": false,
           "stat_prefix": "172.30.79.10_80",
           "generate_request_id": true,
           "stream_idle_timeout": "0s",
           "upgrade_configs": [
            {
             "upgrade_type": "websocket"
            }
           ],
           "forward_client_cert_details": "APPEND_FORWARD",
           "access_log": [
            {
             "name": "envoy.file_access_log",
             "config": {
              "path": "/dev/stdout",
              "format": "[%START_TIME%] \"%REQ(:METHOD)% %REQ(X-ENVOY-ORIGINAL-PATH?:PATH)% %PROTOCOL%\" %RESPONSE_CODE% %RESPONSE_FLAGS% %BYTES_RECEIVED% %BYTES_SENT% %DURATION% %RESP(X-ENVOY-UPSTREAM-SERVICE-TIME)% \"%REQ(X-FORWARDED-FOR)%\" \"%REQ(USER-AGENT)%\" \"%REQ(X-REQUEST-ID)%\" \"%REQ(:AUTHORITY)%\" \"%UPSTREAM_HOST%\" %UPSTREAM_CLUSTER% %UPSTREAM_LOCAL_ADDRESS% %DOWNSTREAM_LOCAL_ADDRESS% %DOWNSTREAM_REMOTE_ADDRESS% %REQUESTED_SERVER_NAME%\n"
             }
            }
           ],
           "http_filters": [
            {
             "name": "istio_authn",
             "config": {
              "policy": {
               "peers": [
                {
                 "mtls": {
                  "mode": "PERMISSIVE"
                 }
                }
               ]
              }
             }
            },
            {
             "name": "mixer",
             "config": {
              "transport": {
               "check_cluster": "outbound|15004||istio-policy.istio-system.svc.cluster.local",
               "network_fail_policy": {
                "policy": "FAIL_CLOSE"
               },
               "report_cluster": "outbound|15004||istio-telemetry.istio-system.svc.cluster.local",
               "attributes_for_mixer_proxy": {
                "attributes": {
                 "source.uid": {
                  "string_value": "kubernetes://myclient-c58c9c46d-nwz8v.default"
                 }
                }
               }
              },
              "service_configs": {
               "default": {}
              },
              "default_destination_service": "default",
              "mixer_attributes": {
               "attributes": {
                "context.reporter.kind": {
                 "string_value": "inbound"
                },
                "destination.port": {
                 "int64_value": "80"
                },
                "context.reporter.uid": {
                 "string_value": "kubernetes://myclient-c58c9c46d-nwz8v.default"
                },
                "destination.namespace": {
                 "string_value": "default"
                },
                "destination.ip": {
                 "bytes_value": "AAAAAAAAAAAAAP//rB5PCg=="
                },
                "destination.uid": {
                 "string_value": "kubernetes://myclient-c58c9c46d-nwz8v.default"
                }
               }
              }
             }
            },
            {
             "name": "envoy.cors"
            },
            {
             "name": "envoy.fault"
            },
            {
             "name": "envoy.router"
            }
           ]
          }
         }
        ]
       }
      ],
      "deprecated_v1": {
       "bind_to_port": false
      },
      "listener_filters": [
       {
        "name": "envoy.listener.tls_inspector"
       }
      ]
     },
     "last_updated": "2018-11-13T14:36:31.648Z"
    },
    {
     "version_info": "2018-11-13T14:36:19Z/12",
     "listener": {
      "name": "172.21.179.14_31400",
      "address": {
       "socket_address": {
        "address": "172.21.179.14",
        "port_value": 31400
       }
      },
      "filter_chains": [
       {
        "filters": [
         {
          "name": "mixer",
          "config": {
           "transport": {
            "check_cluster": "outbound|15004||istio-policy.istio-system.svc.cluster.local",
            "network_fail_policy": {
             "policy": "FAIL_CLOSE"
            },
            "report_cluster": "outbound|15004||istio-telemetry.istio-system.svc.cluster.local",
            "attributes_for_mixer_proxy": {
             "attributes": {
              "source.uid": {
               "string_value": "kubernetes://myclient-c58c9c46d-nwz8v.default"
              }
             }
            }
           },
           "disable_check_calls": true,
           "mixer_attributes": {
            "attributes": {
             "context.reporter.kind": {
              "string_value": "outbound"
             },
             "context.reporter.uid": {
              "string_value": "kubernetes://myclient-c58c9c46d-nwz8v.default"
             },
             "source.uid": {
              "string_value": "kubernetes://myclient-c58c9c46d-nwz8v.default"
             },
             "source.namespace": {
              "string_value": "default"
             },
             "destination.service.uid": {
              "string_value": "istio://istio-system/services/istio-ingressgateway"
             },
             "destination.service.host": {
              "string_value": "istio-ingressgateway.istio-system.svc.cluster.local"
             },
             "destination.service.name": {
              "string_value": "istio-ingressgateway"
             },
             "destination.service.namespace": {
              "string_value": "istio-system"
             }
            }
           }
          }
         },
         {
          "name": "envoy.tcp_proxy",
          "config": {
           "cluster": "outbound|31400||istio-ingressgateway.istio-system.svc.cluster.local",
           "access_log": [
            {
             "config": {
              "path": "/dev/stdout",
              "format": "[%START_TIME%] %RESPONSE_FLAGS% %BYTES_RECEIVED% %BYTES_SENT% %DURATION% \"%UPSTREAM_HOST%\" %UPSTREAM_CLUSTER% %UPSTREAM_LOCAL_ADDRESS% %DOWNSTREAM_LOCAL_ADDRESS% %DOWNSTREAM_REMOTE_ADDRESS% %REQUESTED_SERVER_NAME%\n"
             },
             "name": "envoy.file_access_log"
            }
           ],
           "stat_prefix": "outbound|31400||istio-ingressgateway.istio-system.svc.cluster.local"
          }
         }
        ]
       }
      ],
      "deprecated_v1": {
       "bind_to_port": false
      }
     },
     "last_updated": "2018-11-13T14:36:31.653Z"
    },
    {
     "version_info": "2018-11-13T14:36:19Z/12",
     "listener": {
      "name": "172.21.179.14_15443",
      "address": {
       "socket_address": {
        "address": "172.21.179.14",
        "port_value": 15443
       }
      },
      "filter_chains": [
       {
        "filters": [
         {
          "name": "mixer",
          "config": {
           "transport": {
            "check_cluster": "outbound|15004||istio-policy.istio-system.svc.cluster.local",
            "network_fail_policy": {
             "policy": "FAIL_CLOSE"
            },
            "report_cluster": "outbound|15004||istio-telemetry.istio-system.svc.cluster.local",
            "attributes_for_mixer_proxy": {
             "attributes": {
              "source.uid": {
               "string_value": "kubernetes://myclient-c58c9c46d-nwz8v.default"
              }
             }
            }
           },
           "disable_check_calls": true,
           "mixer_attributes": {
            "attributes": {
             "context.reporter.uid": {
              "string_value": "kubernetes://myclient-c58c9c46d-nwz8v.default"
             },
             "source.uid": {
              "string_value": "kubernetes://myclient-c58c9c46d-nwz8v.default"
             },
             "source.namespace": {
              "string_value": "default"
             },
             "destination.service.uid": {
              "string_value": "istio://istio-system/services/istio-ingressgateway"
             },
             "destination.service.host": {
              "string_value": "istio-ingressgateway.istio-system.svc.cluster.local"
             },
             "destination.service.namespace": {
              "string_value": "istio-system"
             },
             "destination.service.name": {
              "string_value": "istio-ingressgateway"
             },
             "context.reporter.kind": {
              "string_value": "outbound"
             }
            }
           }
          }
         },
         {
          "name": "envoy.tcp_proxy",
          "config": {
           "stat_prefix": "outbound|15443||istio-ingressgateway.istio-system.svc.cluster.local",
           "cluster": "outbound|15443||istio-ingressgateway.istio-system.svc.cluster.local",
           "access_log": [
            {
             "name": "envoy.file_access_log",
             "config": {
              "path": "/dev/stdout",
              "format": "[%START_TIME%] %RESPONSE_FLAGS% %BYTES_RECEIVED% %BYTES_SENT% %DURATION% \"%UPSTREAM_HOST%\" %UPSTREAM_CLUSTER% %UPSTREAM_LOCAL_ADDRESS% %DOWNSTREAM_LOCAL_ADDRESS% %DOWNSTREAM_REMOTE_ADDRESS% %REQUESTED_SERVER_NAME%\n"
             }
            }
           ]
          }
         }
        ]
       }
      ],
      "deprecated_v1": {
       "bind_to_port": false
      }
     },
     "last_updated": "2018-11-13T14:36:31.654Z"
    },
    {
     "version_info": "2018-11-13T14:36:19Z/12",
     "listener": {
      "name": "172.21.129.203_15443",
      "address": {
       "socket_address": {
        "address": "172.21.129.203",
        "port_value": 15443
       }
      },
      "filter_chains": [
       {
        "filters": [
         {
          "name": "mixer",
          "config": {
           "disable_check_calls": true,
           "mixer_attributes": {
            "attributes": {
             "context.reporter.uid": {
              "string_value": "kubernetes://myclient-c58c9c46d-nwz8v.default"
             },
             "source.uid": {
              "string_value": "kubernetes://myclient-c58c9c46d-nwz8v.default"
             },
             "source.namespace": {
              "string_value": "default"
             },
             "destination.service.uid": {
              "string_value": "istio://istio-system/services/istio-egressgateway"
             },
             "destination.service.host": {
              "string_value": "istio-egressgateway.istio-system.svc.cluster.local"
             },
             "destination.service.name": {
              "string_value": "istio-egressgateway"
             },
             "destination.service.namespace": {
              "string_value": "istio-system"
             },
             "context.reporter.kind": {
              "string_value": "outbound"
             }
            }
           },
           "transport": {
            "attributes_for_mixer_proxy": {
             "attributes": {
              "source.uid": {
               "string_value": "kubernetes://myclient-c58c9c46d-nwz8v.default"
              }
             }
            },
            "check_cluster": "outbound|15004||istio-policy.istio-system.svc.cluster.local",
            "network_fail_policy": {
             "policy": "FAIL_CLOSE"
            },
            "report_cluster": "outbound|15004||istio-telemetry.istio-system.svc.cluster.local"
           }
          }
         },
         {
          "name": "envoy.tcp_proxy",
          "config": {
           "cluster": "outbound|15443||istio-egressgateway.istio-system.svc.cluster.local",
           "access_log": [
            {
             "name": "envoy.file_access_log",
             "config": {
              "path": "/dev/stdout",
              "format": "[%START_TIME%] %RESPONSE_FLAGS% %BYTES_RECEIVED% %BYTES_SENT% %DURATION% \"%UPSTREAM_HOST%\" %UPSTREAM_CLUSTER% %UPSTREAM_LOCAL_ADDRESS% %DOWNSTREAM_LOCAL_ADDRESS% %DOWNSTREAM_REMOTE_ADDRESS% %REQUESTED_SERVER_NAME%\n"
             }
            }
           ],
           "stat_prefix": "outbound|15443||istio-egressgateway.istio-system.svc.cluster.local"
          }
         }
        ]
       }
      ],
      "deprecated_v1": {
       "bind_to_port": false
      }
     },
     "last_updated": "2018-11-13T14:36:31.655Z"
    },
    {
     "version_info": "2018-11-13T14:36:19Z/12",
     "listener": {
      "name": "172.21.118.255_443",
      "address": {
       "socket_address": {
        "address": "172.21.118.255",
        "port_value": 443
       }
      },
      "filter_chains": [
       {
        "filters": [
         {
          "name": "mixer",
          "config": {
           "disable_check_calls": true,
           "mixer_attributes": {
            "attributes": {
             "context.reporter.kind": {
              "string_value": "outbound"
             },
             "context.reporter.uid": {
              "string_value": "kubernetes://myclient-c58c9c46d-nwz8v.default"
             },
             "source.uid": {
              "string_value": "kubernetes://myclient-c58c9c46d-nwz8v.default"
             },
             "source.namespace": {
              "string_value": "default"
             },
             "destination.service.host": {
              "string_value": "istio-galley.istio-system.svc.cluster.local"
             },
             "destination.service.uid": {
              "string_value": "istio://istio-system/services/istio-galley"
             },
             "destination.service.namespace": {
              "string_value": "istio-system"
             },
             "destination.service.name": {
              "string_value": "istio-galley"
             }
            }
           },
           "transport": {
            "check_cluster": "outbound|15004||istio-policy.istio-system.svc.cluster.local",
            "network_fail_policy": {
             "policy": "FAIL_CLOSE"
            },
            "report_cluster": "outbound|15004||istio-telemetry.istio-system.svc.cluster.local",
            "attributes_for_mixer_proxy": {
             "attributes": {
              "source.uid": {
               "string_value": "kubernetes://myclient-c58c9c46d-nwz8v.default"
              }
             }
            }
           }
          }
         },
         {
          "name": "envoy.tcp_proxy",
          "config": {
           "access_log": [
            {
             "config": {
              "path": "/dev/stdout",
              "format": "[%START_TIME%] %RESPONSE_FLAGS% %BYTES_RECEIVED% %BYTES_SENT% %DURATION% \"%UPSTREAM_HOST%\" %UPSTREAM_CLUSTER% %UPSTREAM_LOCAL_ADDRESS% %DOWNSTREAM_LOCAL_ADDRESS% %DOWNSTREAM_REMOTE_ADDRESS% %REQUESTED_SERVER_NAME%\n"
             },
             "name": "envoy.file_access_log"
            }
           ],
           "stat_prefix": "outbound|443||istio-galley.istio-system.svc.cluster.local",
           "cluster": "outbound|443||istio-galley.istio-system.svc.cluster.local"
          }
         }
        ]
       }
      ],
      "deprecated_v1": {
       "bind_to_port": false
      }
     },
     "last_updated": "2018-11-13T14:36:31.656Z"
    },
    {
     "version_info": "2018-11-13T14:36:19Z/12",
     "listener": {
      "name": "172.21.0.1_443",
      "address": {
       "socket_address": {
        "address": "172.21.0.1",
        "port_value": 443
       }
      },
      "filter_chains": [
       {
        "filters": [
         {
          "name": "mixer",
          "config": {
           "transport": {
            "check_cluster": "outbound|15004||istio-policy.istio-system.svc.cluster.local",
            "network_fail_policy": {
             "policy": "FAIL_CLOSE"
            },
            "report_cluster": "outbound|15004||istio-telemetry.istio-system.svc.cluster.local",
            "attributes_for_mixer_proxy": {
             "attributes": {
              "source.uid": {
               "string_value": "kubernetes://myclient-c58c9c46d-nwz8v.default"
              }
             }
            }
           },
           "disable_check_calls": true,
           "mixer_attributes": {
            "attributes": {
             "context.reporter.kind": {
              "string_value": "outbound"
             },
             "context.reporter.uid": {
              "string_value": "kubernetes://myclient-c58c9c46d-nwz8v.default"
             },
             "source.uid": {
              "string_value": "kubernetes://myclient-c58c9c46d-nwz8v.default"
             },
             "source.namespace": {
              "string_value": "default"
             },
             "destination.service.uid": {
              "string_value": "istio://default/services/kubernetes"
             },
             "destination.service.host": {
              "string_value": "kubernetes.default.svc.cluster.local"
             },
             "destination.service.namespace": {
              "string_value": "default"
             },
             "destination.service.name": {
              "string_value": "kubernetes"
             }
            }
           }
          }
         },
         {
          "name": "envoy.tcp_proxy",
          "config": {
           "access_log": [
            {
             "config": {
              "path": "/dev/stdout",
              "format": "[%START_TIME%] %RESPONSE_FLAGS% %BYTES_RECEIVED% %BYTES_SENT% %DURATION% \"%UPSTREAM_HOST%\" %UPSTREAM_CLUSTER% %UPSTREAM_LOCAL_ADDRESS% %DOWNSTREAM_LOCAL_ADDRESS% %DOWNSTREAM_REMOTE_ADDRESS% %REQUESTED_SERVER_NAME%\n"
             },
             "name": "envoy.file_access_log"
            }
           ],
           "stat_prefix": "outbound|443||kubernetes.default.svc.cluster.local",
           "cluster": "outbound|443||kubernetes.default.svc.cluster.local"
          }
         }
        ]
       }
      ],
      "deprecated_v1": {
       "bind_to_port": false
      }
     },
     "last_updated": "2018-11-13T14:36:31.656Z"
    },
    {
     "version_info": "2018-11-13T14:36:19Z/12",
     "listener": {
      "name": "172.21.129.203_443",
      "address": {
       "socket_address": {
        "address": "172.21.129.203",
        "port_value": 443
       }
      },
      "filter_chains": [
       {
        "filters": [
         {
          "name": "mixer",
          "config": {
           "transport": {
            "check_cluster": "outbound|15004||istio-policy.istio-system.svc.cluster.local",
            "network_fail_policy": {
             "policy": "FAIL_CLOSE"
            },
            "report_cluster": "outbound|15004||istio-telemetry.istio-system.svc.cluster.local",
            "attributes_for_mixer_proxy": {
             "attributes": {
              "source.uid": {
               "string_value": "kubernetes://myclient-c58c9c46d-nwz8v.default"
              }
             }
            }
           },
           "disable_check_calls": true,
           "mixer_attributes": {
            "attributes": {
             "context.reporter.kind": {
              "string_value": "outbound"
             },
             "context.reporter.uid": {
              "string_value": "kubernetes://myclient-c58c9c46d-nwz8v.default"
             },
             "source.uid": {
              "string_value": "kubernetes://myclient-c58c9c46d-nwz8v.default"
             },
             "source.namespace": {
              "string_value": "default"
             },
             "destination.service.uid": {
              "string_value": "istio://istio-system/services/istio-egressgateway"
             },
             "destination.service.host": {
              "string_value": "istio-egressgateway.istio-system.svc.cluster.local"
             },
             "destination.service.name": {
              "string_value": "istio-egressgateway"
             },
             "destination.service.namespace": {
              "string_value": "istio-system"
             }
            }
           }
          }
         },
         {
          "name": "envoy.tcp_proxy",
          "config": {
           "cluster": "outbound|443||istio-egressgateway.istio-system.svc.cluster.local",
           "access_log": [
            {
             "name": "envoy.file_access_log",
             "config": {
              "path": "/dev/stdout",
              "format": "[%START_TIME%] %RESPONSE_FLAGS% %BYTES_RECEIVED% %BYTES_SENT% %DURATION% \"%UPSTREAM_HOST%\" %UPSTREAM_CLUSTER% %UPSTREAM_LOCAL_ADDRESS% %DOWNSTREAM_LOCAL_ADDRESS% %DOWNSTREAM_REMOTE_ADDRESS% %REQUESTED_SERVER_NAME%\n"
             }
            }
           ],
           "stat_prefix": "outbound|443||istio-egressgateway.istio-system.svc.cluster.local"
          }
         }
        ]
       }
      ],
      "deprecated_v1": {
       "bind_to_port": false
      }
     },
     "last_updated": "2018-11-13T14:36:31.657Z"
    },
    {
     "version_info": "2018-11-13T14:36:19Z/12",
     "listener": {
      "name": "172.21.30.31_53",
      "address": {
       "socket_address": {
        "address": "172.21.30.31",
        "port_value": 53
       }
      },
      "filter_chains": [
       {
        "filters": [
         {
          "name": "mixer",
          "config": {
           "transport": {
            "network_fail_policy": {
             "policy": "FAIL_CLOSE"
            },
            "report_cluster": "outbound|15004||istio-telemetry.istio-system.svc.cluster.local",
            "attributes_for_mixer_proxy": {
             "attributes": {
              "source.uid": {
               "string_value": "kubernetes://myclient-c58c9c46d-nwz8v.default"
              }
             }
            },
            "check_cluster": "outbound|15004||istio-policy.istio-system.svc.cluster.local"
           },
           "disable_check_calls": true,
           "mixer_attributes": {
            "attributes": {
             "source.namespace": {
              "string_value": "default"
             },
             "destination.service.uid": {
              "string_value": "istio://istio-system/services/istiocoredns"
             },
             "destination.service.host": {
              "string_value": "istiocoredns.istio-system.svc.cluster.local"
             },
             "destination.service.namespace": {
              "string_value": "istio-system"
             },
             "destination.service.name": {
              "string_value": "istiocoredns"
             },
             "context.reporter.kind": {
              "string_value": "outbound"
             },
             "context.reporter.uid": {
              "string_value": "kubernetes://myclient-c58c9c46d-nwz8v.default"
             },
             "source.uid": {
              "string_value": "kubernetes://myclient-c58c9c46d-nwz8v.default"
             }
            }
           }
          }
         },
         {
          "name": "envoy.tcp_proxy",
          "config": {
           "access_log": [
            {
             "name": "envoy.file_access_log",
             "config": {
              "format": "[%START_TIME%] %RESPONSE_FLAGS% %BYTES_RECEIVED% %BYTES_SENT% %DURATION% \"%UPSTREAM_HOST%\" %UPSTREAM_CLUSTER% %UPSTREAM_LOCAL_ADDRESS% %DOWNSTREAM_LOCAL_ADDRESS% %DOWNSTREAM_REMOTE_ADDRESS% %REQUESTED_SERVER_NAME%\n",
              "path": "/dev/stdout"
             }
            }
           ],
           "stat_prefix": "outbound|53||istiocoredns.istio-system.svc.cluster.local",
           "cluster": "outbound|53||istiocoredns.istio-system.svc.cluster.local"
          }
         }
        ]
       }
      ],
      "deprecated_v1": {
       "bind_to_port": false
      }
     },
     "last_updated": "2018-11-13T14:36:31.658Z"
    },
    {
     "version_info": "2018-11-13T14:36:19Z/12",
     "listener": {
      "name": "172.21.245.199_15011",
      "address": {
       "socket_address": {
        "address": "172.21.245.199",
        "port_value": 15011
       }
      },
      "filter_chains": [
       {
        "filters": [
         {
          "name": "mixer",
          "config": {
           "transport": {
            "check_cluster": "outbound|15004||istio-policy.istio-system.svc.cluster.local",
            "network_fail_policy": {
             "policy": "FAIL_CLOSE"
            },
            "report_cluster": "outbound|15004||istio-telemetry.istio-system.svc.cluster.local",
            "attributes_for_mixer_proxy": {
             "attributes": {
              "source.uid": {
               "string_value": "kubernetes://myclient-c58c9c46d-nwz8v.default"
              }
             }
            }
           },
           "disable_check_calls": true,
           "mixer_attributes": {
            "attributes": {
             "source.uid": {
              "string_value": "kubernetes://myclient-c58c9c46d-nwz8v.default"
             },
             "source.namespace": {
              "string_value": "default"
             },
             "destination.service.host": {
              "string_value": "istio-pilot.istio-system.svc.cluster.local"
             },
             "destination.service.uid": {
              "string_value": "istio://istio-system/services/istio-pilot"
             },
             "destination.service.name": {
              "string_value": "istio-pilot"
             },
             "destination.service.namespace": {
              "string_value": "istio-system"
             },
             "context.reporter.kind": {
              "string_value": "outbound"
             },
             "context.reporter.uid": {
              "string_value": "kubernetes://myclient-c58c9c46d-nwz8v.default"
             }
            }
           }
          }
         },
         {
          "name": "envoy.tcp_proxy",
          "config": {
           "stat_prefix": "outbound|15011||istio-pilot.istio-system.svc.cluster.local",
           "cluster": "outbound|15011||istio-pilot.istio-system.svc.cluster.local",
           "access_log": [
            {
             "name": "envoy.file_access_log",
             "config": {
              "path": "/dev/stdout",
              "format": "[%START_TIME%] %RESPONSE_FLAGS% %BYTES_RECEIVED% %BYTES_SENT% %DURATION% \"%UPSTREAM_HOST%\" %UPSTREAM_CLUSTER% %UPSTREAM_LOCAL_ADDRESS% %DOWNSTREAM_LOCAL_ADDRESS% %DOWNSTREAM_REMOTE_ADDRESS% %REQUESTED_SERVER_NAME%\n"
             }
            }
           ]
          }
         }
        ]
       }
      ],
      "deprecated_v1": {
       "bind_to_port": false
      }
     },
     "last_updated": "2018-11-13T14:36:31.659Z"
    },
    {
     "version_info": "2018-11-13T14:36:19Z/12",
     "listener": {
      "name": "172.21.11.44_443",
      "address": {
       "socket_address": {
        "address": "172.21.11.44",
        "port_value": 443
       }
      },
      "filter_chains": [
       {
        "filters": [
         {
          "name": "mixer",
          "config": {
           "transport": {
            "attributes_for_mixer_proxy": {
             "attributes": {
              "source.uid": {
               "string_value": "kubernetes://myclient-c58c9c46d-nwz8v.default"
              }
             }
            },
            "check_cluster": "outbound|15004||istio-policy.istio-system.svc.cluster.local",
            "network_fail_policy": {
             "policy": "FAIL_CLOSE"
            },
            "report_cluster": "outbound|15004||istio-telemetry.istio-system.svc.cluster.local"
           },
           "disable_check_calls": true,
           "mixer_attributes": {
            "attributes": {
             "context.reporter.uid": {
              "string_value": "kubernetes://myclient-c58c9c46d-nwz8v.default"
             },
             "source.uid": {
              "string_value": "kubernetes://myclient-c58c9c46d-nwz8v.default"
             },
             "source.namespace": {
              "string_value": "default"
             },
             "destination.service.uid": {
              "string_value": "istio://istio-system/services/istio-sidecar-injector"
             },
             "destination.service.host": {
              "string_value": "istio-sidecar-injector.istio-system.svc.cluster.local"
             },
             "destination.service.name": {
              "string_value": "istio-sidecar-injector"
             },
             "destination.service.namespace": {
              "string_value": "istio-system"
             },
             "context.reporter.kind": {
              "string_value": "outbound"
             }
            }
           }
          }
         },
         {
          "name": "envoy.tcp_proxy",
          "config": {
           "stat_prefix": "outbound|443||istio-sidecar-injector.istio-system.svc.cluster.local",
           "cluster": "outbound|443||istio-sidecar-injector.istio-system.svc.cluster.local",
           "access_log": [
            {
             "name": "envoy.file_access_log",
             "config": {
              "path": "/dev/stdout",
              "format": "[%START_TIME%] %RESPONSE_FLAGS% %BYTES_RECEIVED% %BYTES_SENT% %DURATION% \"%UPSTREAM_HOST%\" %UPSTREAM_CLUSTER% %UPSTREAM_LOCAL_ADDRESS% %DOWNSTREAM_LOCAL_ADDRESS% %DOWNSTREAM_REMOTE_ADDRESS% %REQUESTED_SERVER_NAME%\n"
             }
            }
           ]
          }
         }
        ]
       }
      ],
      "deprecated_v1": {
       "bind_to_port": false
      }
     },
     "last_updated": "2018-11-13T14:36:31.659Z"
    },
    {
     "version_info": "2018-11-13T14:36:19Z/12",
     "listener": {
      "name": "172.21.179.14_443",
      "address": {
       "socket_address": {
        "address": "172.21.179.14",
        "port_value": 443
       }
      },
      "filter_chains": [
       {
        "filters": [
         {
          "name": "mixer",
          "config": {
           "transport": {
            "attributes_for_mixer_proxy": {
             "attributes": {
              "source.uid": {
               "string_value": "kubernetes://myclient-c58c9c46d-nwz8v.default"
              }
             }
            },
            "check_cluster": "outbound|15004||istio-policy.istio-system.svc.cluster.local",
            "network_fail_policy": {
             "policy": "FAIL_CLOSE"
            },
            "report_cluster": "outbound|15004||istio-telemetry.istio-system.svc.cluster.local"
           },
           "disable_check_calls": true,
           "mixer_attributes": {
            "attributes": {
             "destination.service.namespace": {
              "string_value": "istio-system"
             },
             "destination.service.name": {
              "string_value": "istio-ingressgateway"
             },
             "context.reporter.kind": {
              "string_value": "outbound"
             },
             "context.reporter.uid": {
              "string_value": "kubernetes://myclient-c58c9c46d-nwz8v.default"
             },
             "source.uid": {
              "string_value": "kubernetes://myclient-c58c9c46d-nwz8v.default"
             },
             "source.namespace": {
              "string_value": "default"
             },
             "destination.service.host": {
              "string_value": "istio-ingressgateway.istio-system.svc.cluster.local"
             },
             "destination.service.uid": {
              "string_value": "istio://istio-system/services/istio-ingressgateway"
             }
            }
           }
          }
         },
         {
          "name": "envoy.tcp_proxy",
          "config": {
           "stat_prefix": "outbound|443||istio-ingressgateway.istio-system.svc.cluster.local",
           "cluster": "outbound|443||istio-ingressgateway.istio-system.svc.cluster.local",
           "access_log": [
            {
             "name": "envoy.file_access_log",
             "config": {
              "path": "/dev/stdout",
              "format": "[%START_TIME%] %RESPONSE_FLAGS% %BYTES_RECEIVED% %BYTES_SENT% %DURATION% \"%UPSTREAM_HOST%\" %UPSTREAM_CLUSTER% %UPSTREAM_LOCAL_ADDRESS% %DOWNSTREAM_LOCAL_ADDRESS% %DOWNSTREAM_REMOTE_ADDRESS% %REQUESTED_SERVER_NAME%\n"
             }
            }
           ]
          }
         }
        ]
       }
      ],
      "deprecated_v1": {
       "bind_to_port": false
      }
     },
     "last_updated": "2018-11-13T14:36:31.660Z"
    },
    {
     "version_info": "2018-11-13T14:36:19Z/12",
     "listener": {
      "name": "172.21.250.55_42422",
      "address": {
       "socket_address": {
        "address": "172.21.250.55",
        "port_value": 42422
       }
      },
      "filter_chains": [
       {
        "filters": [
         {
          "name": "mixer",
          "config": {
           "transport": {
            "check_cluster": "outbound|15004||istio-policy.istio-system.svc.cluster.local",
            "network_fail_policy": {
             "policy": "FAIL_CLOSE"
            },
            "report_cluster": "outbound|15004||istio-telemetry.istio-system.svc.cluster.local",
            "attributes_for_mixer_proxy": {
             "attributes": {
              "source.uid": {
               "string_value": "kubernetes://myclient-c58c9c46d-nwz8v.default"
              }
             }
            }
           },
           "disable_check_calls": true,
           "mixer_attributes": {
            "attributes": {
             "context.reporter.uid": {
              "string_value": "kubernetes://myclient-c58c9c46d-nwz8v.default"
             },
             "source.uid": {
              "string_value": "kubernetes://myclient-c58c9c46d-nwz8v.default"
             },
             "source.namespace": {
              "string_value": "default"
             },
             "destination.service.host": {
              "string_value": "istio-telemetry.istio-system.svc.cluster.local"
             },
             "destination.service.uid": {
              "string_value": "istio://istio-system/services/istio-telemetry"
             },
             "destination.service.name": {
              "string_value": "istio-telemetry"
             },
             "destination.service.namespace": {
              "string_value": "istio-system"
             },
             "context.reporter.kind": {
              "string_value": "outbound"
             }
            }
           }
          }
         },
         {
          "name": "envoy.tcp_proxy",
          "config": {
           "access_log": [
            {
             "name": "envoy.file_access_log",
             "config": {
              "path": "/dev/stdout",
              "format": "[%START_TIME%] %RESPONSE_FLAGS% %BYTES_RECEIVED% %BYTES_SENT% %DURATION% \"%UPSTREAM_HOST%\" %UPSTREAM_CLUSTER% %UPSTREAM_LOCAL_ADDRESS% %DOWNSTREAM_LOCAL_ADDRESS% %DOWNSTREAM_REMOTE_ADDRESS% %REQUESTED_SERVER_NAME%\n"
             }
            }
           ],
           "stat_prefix": "outbound|42422||istio-telemetry.istio-system.svc.cluster.local",
           "cluster": "outbound|42422||istio-telemetry.istio-system.svc.cluster.local"
          }
         }
        ]
       }
      ],
      "deprecated_v1": {
       "bind_to_port": false
      }
     },
     "last_updated": "2018-11-13T14:36:31.660Z"
    },
    {
     "version_info": "2018-11-13T14:36:19Z/12",
     "listener": {
      "name": "0.0.0.0_15010",
      "address": {
       "socket_address": {
        "address": "0.0.0.0",
        "port_value": 15010
       }
      },
      "filter_chains": [
       {
        "filters": [
         {
          "name": "envoy.http_connection_manager",
          "config": {
           "access_log": [
            {
             "name": "envoy.file_access_log",
             "config": {
              "path": "/dev/stdout",
              "format": "[%START_TIME%] \"%REQ(:METHOD)% %REQ(X-ENVOY-ORIGINAL-PATH?:PATH)% %PROTOCOL%\" %RESPONSE_CODE% %RESPONSE_FLAGS% %BYTES_RECEIVED% %BYTES_SENT% %DURATION% %RESP(X-ENVOY-UPSTREAM-SERVICE-TIME)% \"%REQ(X-FORWARDED-FOR)%\" \"%REQ(USER-AGENT)%\" \"%REQ(X-REQUEST-ID)%\" \"%REQ(:AUTHORITY)%\" \"%UPSTREAM_HOST%\" %UPSTREAM_CLUSTER% %UPSTREAM_LOCAL_ADDRESS% %DOWNSTREAM_LOCAL_ADDRESS% %DOWNSTREAM_REMOTE_ADDRESS% %REQUESTED_SERVER_NAME%\n"
             }
            }
           ],
           "http_filters": [
            {
             "name": "mixer",
             "config": {
              "transport": {
               "check_cluster": "outbound|15004||istio-policy.istio-system.svc.cluster.local",
               "network_fail_policy": {
                "policy": "FAIL_CLOSE"
               },
               "report_cluster": "outbound|15004||istio-telemetry.istio-system.svc.cluster.local",
               "attributes_for_mixer_proxy": {
                "attributes": {
                 "source.uid": {
                  "string_value": "kubernetes://myclient-c58c9c46d-nwz8v.default"
                 }
                }
               }
              },
              "service_configs": {
               "default": {
                "disable_check_calls": true
               }
              },
              "default_destination_service": "default",
              "mixer_attributes": {
               "attributes": {
                "context.reporter.kind": {
                 "string_value": "outbound"
                },
                "source.namespace": {
                 "string_value": "default"
                },
                "context.reporter.uid": {
                 "string_value": "kubernetes://myclient-c58c9c46d-nwz8v.default"
                },
                "source.uid": {
                 "string_value": "kubernetes://myclient-c58c9c46d-nwz8v.default"
                }
               }
              },
              "forward_attributes": {
               "attributes": {
                "source.uid": {
                 "string_value": "kubernetes://myclient-c58c9c46d-nwz8v.default"
                }
               }
              }
             }
            },
            {
             "name": "envoy.cors"
            },
            {
             "name": "envoy.fault"
            },
            {
             "name": "envoy.router"
            }
           ],
           "tracing": {
            "client_sampling": {
             "value": 100
            },
            "operation_name": "EGRESS",
            "overall_sampling": {
             "value": 100
            },
            "random_sampling": {
             "value": 100
            }
           },
           "stat_prefix": "0.0.0.0_15010",
           "rds": {
            "route_config_name": "15010",
            "config_source": {
             "ads": {}
            }
           },
           "use_remote_address": false,
           "generate_request_id": true,
           "stream_idle_timeout": "0s",
           "upgrade_configs": [
            {
             "upgrade_type": "websocket"
            }
           ]
          }
         }
        ]
       }
      ],
      "deprecated_v1": {
       "bind_to_port": false
      }
     },
     "last_updated": "2018-11-13T14:36:31.665Z"
    },
    {
     "version_info": "2018-11-13T14:36:19Z/12",
     "listener": {
      "name": "0.0.0.0_15029",
      "address": {
       "socket_address": {
        "address": "0.0.0.0",
        "port_value": 15029
       }
      },
      "filter_chains": [
       {
        "filters": [
         {
          "name": "envoy.http_connection_manager",
          "config": {
           "tracing": {
            "overall_sampling": {
             "value": 100
            },
            "random_sampling": {
             "value": 100
            },
            "client_sampling": {
             "value": 100
            },
            "operation_name": "EGRESS"
           },
           "stat_prefix": "0.0.0.0_15029",
           "use_remote_address": false,
           "rds": {
            "route_config_name": "15029",
            "config_source": {
             "ads": {}
            }
           },
           "generate_request_id": true,
           "stream_idle_timeout": "0s",
           "upgrade_configs": [
            {
             "upgrade_type": "websocket"
            }
           ],
           "access_log": [
            {
             "name": "envoy.file_access_log",
             "config": {
              "path": "/dev/stdout",
              "format": "[%START_TIME%] \"%REQ(:METHOD)% %REQ(X-ENVOY-ORIGINAL-PATH?:PATH)% %PROTOCOL%\" %RESPONSE_CODE% %RESPONSE_FLAGS% %BYTES_RECEIVED% %BYTES_SENT% %DURATION% %RESP(X-ENVOY-UPSTREAM-SERVICE-TIME)% \"%REQ(X-FORWARDED-FOR)%\" \"%REQ(USER-AGENT)%\" \"%REQ(X-REQUEST-ID)%\" \"%REQ(:AUTHORITY)%\" \"%UPSTREAM_HOST%\" %UPSTREAM_CLUSTER% %UPSTREAM_LOCAL_ADDRESS% %DOWNSTREAM_LOCAL_ADDRESS% %DOWNSTREAM_REMOTE_ADDRESS% %REQUESTED_SERVER_NAME%\n"
             }
            }
           ],
           "http_filters": [
            {
             "config": {
              "transport": {
               "check_cluster": "outbound|15004||istio-policy.istio-system.svc.cluster.local",
               "network_fail_policy": {
                "policy": "FAIL_CLOSE"
               },
               "report_cluster": "outbound|15004||istio-telemetry.istio-system.svc.cluster.local",
               "attributes_for_mixer_proxy": {
                "attributes": {
                 "source.uid": {
                  "string_value": "kubernetes://myclient-c58c9c46d-nwz8v.default"
                 }
                }
               }
              },
              "service_configs": {
               "default": {
                "disable_check_calls": true
               }
              },
              "default_destination_service": "default",
              "forward_attributes": {
               "attributes": {
                "source.uid": {
                 "string_value": "kubernetes://myclient-c58c9c46d-nwz8v.default"
                }
               }
              },
              "mixer_attributes": {
               "attributes": {
                "context.reporter.kind": {
                 "string_value": "outbound"
                },
                "source.namespace": {
                 "string_value": "default"
                },
                "context.reporter.uid": {
                 "string_value": "kubernetes://myclient-c58c9c46d-nwz8v.default"
                },
                "source.uid": {
                 "string_value": "kubernetes://myclient-c58c9c46d-nwz8v.default"
                }
               }
              }
             },
             "name": "mixer"
            },
            {
             "name": "envoy.cors"
            },
            {
             "name": "envoy.fault"
            },
            {
             "name": "envoy.router"
            }
           ]
          }
         }
        ]
       }
      ],
      "deprecated_v1": {
       "bind_to_port": false
      }
     },
     "last_updated": "2018-11-13T14:36:31.669Z"
    },
    {
     "version_info": "2018-11-13T14:36:19Z/12",
     "listener": {
      "name": "0.0.0.0_15032",
      "address": {
       "socket_address": {
        "address": "0.0.0.0",
        "port_value": 15032
       }
      },
      "filter_chains": [
       {
        "filters": [
         {
          "name": "envoy.http_connection_manager",
          "config": {
           "http_filters": [
            {
             "name": "mixer",
             "config": {
              "transport": {
               "check_cluster": "outbound|15004||istio-policy.istio-system.svc.cluster.local",
               "network_fail_policy": {
                "policy": "FAIL_CLOSE"
               },
               "report_cluster": "outbound|15004||istio-telemetry.istio-system.svc.cluster.local",
               "attributes_for_mixer_proxy": {
                "attributes": {
                 "source.uid": {
                  "string_value": "kubernetes://myclient-c58c9c46d-nwz8v.default"
                 }
                }
               }
              },
              "service_configs": {
               "default": {
                "disable_check_calls": true
               }
              },
              "default_destination_service": "default",
              "forward_attributes": {
               "attributes": {
                "source.uid": {
                 "string_value": "kubernetes://myclient-c58c9c46d-nwz8v.default"
                }
               }
              },
              "mixer_attributes": {
               "attributes": {
                "context.reporter.uid": {
                 "string_value": "kubernetes://myclient-c58c9c46d-nwz8v.default"
                },
                "source.uid": {
                 "string_value": "kubernetes://myclient-c58c9c46d-nwz8v.default"
                },
                "context.reporter.kind": {
                 "string_value": "outbound"
                },
                "source.namespace": {
                 "string_value": "default"
                }
               }
              }
             }
            },
            {
             "name": "envoy.cors"
            },
            {
             "name": "envoy.fault"
            },
            {
             "name": "envoy.router"
            }
           ],
           "tracing": {
            "overall_sampling": {
             "value": 100
            },
            "random_sampling": {
             "value": 100
            },
            "client_sampling": {
             "value": 100
            },
            "operation_name": "EGRESS"
           },
           "rds": {
            "route_config_name": "15032",
            "config_source": {
             "ads": {}
            }
           },
           "stat_prefix": "0.0.0.0_15032",
           "use_remote_address": false,
           "stream_idle_timeout": "0s",
           "generate_request_id": true,
           "upgrade_configs": [
            {
             "upgrade_type": "websocket"
            }
           ],
           "access_log": [
            {
             "name": "envoy.file_access_log",
             "config": {
              "path": "/dev/stdout",
              "format": "[%START_TIME%] \"%REQ(:METHOD)% %REQ(X-ENVOY-ORIGINAL-PATH?:PATH)% %PROTOCOL%\" %RESPONSE_CODE% %RESPONSE_FLAGS% %BYTES_RECEIVED% %BYTES_SENT% %DURATION% %RESP(X-ENVOY-UPSTREAM-SERVICE-TIME)% \"%REQ(X-FORWARDED-FOR)%\" \"%REQ(USER-AGENT)%\" \"%REQ(X-REQUEST-ID)%\" \"%REQ(:AUTHORITY)%\" \"%UPSTREAM_HOST%\" %UPSTREAM_CLUSTER% %UPSTREAM_LOCAL_ADDRESS% %DOWNSTREAM_LOCAL_ADDRESS% %DOWNSTREAM_REMOTE_ADDRESS% %REQUESTED_SERVER_NAME%\n"
             }
            }
           ]
          }
         }
        ]
       }
      ],
      "deprecated_v1": {
       "bind_to_port": false
      }
     },
     "last_updated": "2018-11-13T14:36:31.670Z"
    },
    {
     "version_info": "2018-11-13T14:36:19Z/12",
     "listener": {
      "name": "0.0.0.0_15004",
      "address": {
       "socket_address": {
        "address": "0.0.0.0",
        "port_value": 15004
       }
      },
      "filter_chains": [
       {
        "filters": [
         {
          "name": "envoy.http_connection_manager",
          "config": {
           "upgrade_configs": [
            {
             "upgrade_type": "websocket"
            }
           ],
           "access_log": [
            {
             "name": "envoy.file_access_log",
             "config": {
              "format": "[%START_TIME%] \"%REQ(:METHOD)% %REQ(X-ENVOY-ORIGINAL-PATH?:PATH)% %PROTOCOL%\" %RESPONSE_CODE% %RESPONSE_FLAGS% %BYTES_RECEIVED% %BYTES_SENT% %DURATION% %RESP(X-ENVOY-UPSTREAM-SERVICE-TIME)% \"%REQ(X-FORWARDED-FOR)%\" \"%REQ(USER-AGENT)%\" \"%REQ(X-REQUEST-ID)%\" \"%REQ(:AUTHORITY)%\" \"%UPSTREAM_HOST%\" %UPSTREAM_CLUSTER% %UPSTREAM_LOCAL_ADDRESS% %DOWNSTREAM_LOCAL_ADDRESS% %DOWNSTREAM_REMOTE_ADDRESS% %REQUESTED_SERVER_NAME%\n",
              "path": "/dev/stdout"
             }
            }
           ],
           "http_filters": [
            {
             "name": "mixer",
             "config": {
              "default_destination_service": "default",
              "forward_attributes": {
               "attributes": {
                "source.uid": {
                 "string_value": "kubernetes://myclient-c58c9c46d-nwz8v.default"
                }
               }
              },
              "mixer_attributes": {
               "attributes": {
                "context.reporter.uid": {
                 "string_value": "kubernetes://myclient-c58c9c46d-nwz8v.default"
                },
                "source.uid": {
                 "string_value": "kubernetes://myclient-c58c9c46d-nwz8v.default"
                },
                "context.reporter.kind": {
                 "string_value": "outbound"
                },
                "source.namespace": {
                 "string_value": "default"
                }
               }
              },
              "transport": {
               "check_cluster": "outbound|15004||istio-policy.istio-system.svc.cluster.local",
               "network_fail_policy": {
                "policy": "FAIL_CLOSE"
               },
               "report_cluster": "outbound|15004||istio-telemetry.istio-system.svc.cluster.local",
               "attributes_for_mixer_proxy": {
                "attributes": {
                 "source.uid": {
                  "string_value": "kubernetes://myclient-c58c9c46d-nwz8v.default"
                 }
                }
               }
              },
              "service_configs": {
               "default": {
                "disable_check_calls": true
               }
              }
             }
            },
            {
             "name": "envoy.cors"
            },
            {
             "name": "envoy.fault"
            },
            {
             "name": "envoy.router"
            }
           ],
           "tracing": {
            "client_sampling": {
             "value": 100
            },
            "operation_name": "EGRESS",
            "overall_sampling": {
             "value": 100
            },
            "random_sampling": {
             "value": 100
            }
           },
           "use_remote_address": false,
           "rds": {
            "config_source": {
             "ads": {}
            },
            "route_config_name": "15004"
           },
           "stat_prefix": "0.0.0.0_15004",
           "stream_idle_timeout": "0s",
           "generate_request_id": true
          }
         }
        ]
       }
      ],
      "deprecated_v1": {
       "bind_to_port": false
      }
     },
     "last_updated": "2018-11-13T14:36:31.672Z"
    },
    {
     "version_info": "2018-11-13T14:36:19Z/12",
     "listener": {
      "name": "0.0.0.0_15031",
      "address": {
       "socket_address": {
        "address": "0.0.0.0",
        "port_value": 15031
       }
      },
      "filter_chains": [
       {
        "filters": [
         {
          "name": "envoy.http_connection_manager",
          "config": {
           "generate_request_id": true,
           "stream_idle_timeout": "0s",
           "upgrade_configs": [
            {
             "upgrade_type": "websocket"
            }
           ],
           "access_log": [
            {
             "name": "envoy.file_access_log",
             "config": {
              "path": "/dev/stdout",
              "format": "[%START_TIME%] \"%REQ(:METHOD)% %REQ(X-ENVOY-ORIGINAL-PATH?:PATH)% %PROTOCOL%\" %RESPONSE_CODE% %RESPONSE_FLAGS% %BYTES_RECEIVED% %BYTES_SENT% %DURATION% %RESP(X-ENVOY-UPSTREAM-SERVICE-TIME)% \"%REQ(X-FORWARDED-FOR)%\" \"%REQ(USER-AGENT)%\" \"%REQ(X-REQUEST-ID)%\" \"%REQ(:AUTHORITY)%\" \"%UPSTREAM_HOST%\" %UPSTREAM_CLUSTER% %UPSTREAM_LOCAL_ADDRESS% %DOWNSTREAM_LOCAL_ADDRESS% %DOWNSTREAM_REMOTE_ADDRESS% %REQUESTED_SERVER_NAME%\n"
             }
            }
           ],
           "http_filters": [
            {
             "name": "mixer",
             "config": {
              "transport": {
               "check_cluster": "outbound|15004||istio-policy.istio-system.svc.cluster.local",
               "network_fail_policy": {
                "policy": "FAIL_CLOSE"
               },
               "report_cluster": "outbound|15004||istio-telemetry.istio-system.svc.cluster.local",
               "attributes_for_mixer_proxy": {
                "attributes": {
                 "source.uid": {
                  "string_value": "kubernetes://myclient-c58c9c46d-nwz8v.default"
                 }
                }
               }
              },
              "service_configs": {
               "default": {
                "disable_check_calls": true
               }
              },
              "default_destination_service": "default",
              "mixer_attributes": {
               "attributes": {
                "context.reporter.uid": {
                 "string_value": "kubernetes://myclient-c58c9c46d-nwz8v.default"
                },
                "source.uid": {
                 "string_value": "kubernetes://myclient-c58c9c46d-nwz8v.default"
                },
                "context.reporter.kind": {
                 "string_value": "outbound"
                },
                "source.namespace": {
                 "string_value": "default"
                }
               }
              },
              "forward_attributes": {
               "attributes": {
                "source.uid": {
                 "string_value": "kubernetes://myclient-c58c9c46d-nwz8v.default"
                }
               }
              }
             }
            },
            {
             "name": "envoy.cors"
            },
            {
             "name": "envoy.fault"
            },
            {
             "name": "envoy.router"
            }
           ],
           "tracing": {
            "overall_sampling": {
             "value": 100
            },
            "random_sampling": {
             "value": 100
            },
            "client_sampling": {
             "value": 100
            },
            "operation_name": "EGRESS"
           },
           "rds": {
            "route_config_name": "15031",
            "config_source": {
             "ads": {}
            }
           },
           "stat_prefix": "0.0.0.0_15031",
           "use_remote_address": false
          }
         }
        ]
       }
      ],
      "deprecated_v1": {
       "bind_to_port": false
      }
     },
     "last_updated": "2018-11-13T14:36:31.673Z"
    },
    {
     "version_info": "2018-11-13T14:36:19Z/12",
     "listener": {
      "name": "0.0.0.0_9091",
      "address": {
       "socket_address": {
        "address": "0.0.0.0",
        "port_value": 9091
       }
      },
      "filter_chains": [
       {
        "filters": [
         {
          "name": "envoy.http_connection_manager",
          "config": {
           "stream_idle_timeout": "0s",
           "generate_request_id": true,
           "upgrade_configs": [
            {
             "upgrade_type": "websocket"
            }
           ],
           "access_log": [
            {
             "name": "envoy.file_access_log",
             "config": {
              "path": "/dev/stdout",
              "format": "[%START_TIME%] \"%REQ(:METHOD)% %REQ(X-ENVOY-ORIGINAL-PATH?:PATH)% %PROTOCOL%\" %RESPONSE_CODE% %RESPONSE_FLAGS% %BYTES_RECEIVED% %BYTES_SENT% %DURATION% %RESP(X-ENVOY-UPSTREAM-SERVICE-TIME)% \"%REQ(X-FORWARDED-FOR)%\" \"%REQ(USER-AGENT)%\" \"%REQ(X-REQUEST-ID)%\" \"%REQ(:AUTHORITY)%\" \"%UPSTREAM_HOST%\" %UPSTREAM_CLUSTER% %UPSTREAM_LOCAL_ADDRESS% %DOWNSTREAM_LOCAL_ADDRESS% %DOWNSTREAM_REMOTE_ADDRESS% %REQUESTED_SERVER_NAME%\n"
             }
            }
           ],
           "http_filters": [
            {
             "name": "mixer",
             "config": {
              "default_destination_service": "default",
              "mixer_attributes": {
               "attributes": {
                "source.uid": {
                 "string_value": "kubernetes://myclient-c58c9c46d-nwz8v.default"
                },
                "context.reporter.kind": {
                 "string_value": "outbound"
                },
                "source.namespace": {
                 "string_value": "default"
                },
                "context.reporter.uid": {
                 "string_value": "kubernetes://myclient-c58c9c46d-nwz8v.default"
                }
               }
              },
              "forward_attributes": {
               "attributes": {
                "source.uid": {
                 "string_value": "kubernetes://myclient-c58c9c46d-nwz8v.default"
                }
               }
              },
              "transport": {
               "attributes_for_mixer_proxy": {
                "attributes": {
                 "source.uid": {
                  "string_value": "kubernetes://myclient-c58c9c46d-nwz8v.default"
                 }
                }
               },
               "check_cluster": "outbound|15004||istio-policy.istio-system.svc.cluster.local",
               "network_fail_policy": {
                "policy": "FAIL_CLOSE"
               },
               "report_cluster": "outbound|15004||istio-telemetry.istio-system.svc.cluster.local"
              },
              "service_configs": {
               "default": {
                "disable_check_calls": true
               }
              }
             }
            },
            {
             "name": "envoy.cors"
            },
            {
             "name": "envoy.fault"
            },
            {
             "name": "envoy.router"
            }
           ],
           "tracing": {
            "overall_sampling": {
             "value": 100
            },
            "random_sampling": {
             "value": 100
            },
            "operation_name": "EGRESS",
            "client_sampling": {
             "value": 100
            }
           },
           "use_remote_address": false,
           "stat_prefix": "0.0.0.0_9091",
           "rds": {
            "route_config_name": "9091",
            "config_source": {
             "ads": {}
            }
           }
          }
         }
        ]
       }
      ],
      "deprecated_v1": {
       "bind_to_port": false
      }
     },
     "last_updated": "2018-11-13T14:36:31.678Z"
    },
    {
     "version_info": "2018-11-13T14:36:19Z/12",
     "listener": {
      "name": "0.0.0.0_8060",
      "address": {
       "socket_address": {
        "address": "0.0.0.0",
        "port_value": 8060
       }
      },
      "filter_chains": [
       {
        "filters": [
         {
          "name": "envoy.http_connection_manager",
          "config": {
           "rds": {
            "route_config_name": "8060",
            "config_source": {
             "ads": {}
            }
           },
           "use_remote_address": false,
           "stat_prefix": "0.0.0.0_8060",
           "generate_request_id": true,
           "stream_idle_timeout": "0s",
           "upgrade_configs": [
            {
             "upgrade_type": "websocket"
            }
           ],
           "access_log": [
            {
             "name": "envoy.file_access_log",
             "config": {
              "path": "/dev/stdout",
              "format": "[%START_TIME%] \"%REQ(:METHOD)% %REQ(X-ENVOY-ORIGINAL-PATH?:PATH)% %PROTOCOL%\" %RESPONSE_CODE% %RESPONSE_FLAGS% %BYTES_RECEIVED% %BYTES_SENT% %DURATION% %RESP(X-ENVOY-UPSTREAM-SERVICE-TIME)% \"%REQ(X-FORWARDED-FOR)%\" \"%REQ(USER-AGENT)%\" \"%REQ(X-REQUEST-ID)%\" \"%REQ(:AUTHORITY)%\" \"%UPSTREAM_HOST%\" %UPSTREAM_CLUSTER% %UPSTREAM_LOCAL_ADDRESS% %DOWNSTREAM_LOCAL_ADDRESS% %DOWNSTREAM_REMOTE_ADDRESS% %REQUESTED_SERVER_NAME%\n"
             }
            }
           ],
           "http_filters": [
            {
             "config": {
              "default_destination_service": "default",
              "mixer_attributes": {
               "attributes": {
                "context.reporter.kind": {
                 "string_value": "outbound"
                },
                "source.namespace": {
                 "string_value": "default"
                },
                "context.reporter.uid": {
                 "string_value": "kubernetes://myclient-c58c9c46d-nwz8v.default"
                },
                "source.uid": {
                 "string_value": "kubernetes://myclient-c58c9c46d-nwz8v.default"
                }
               }
              },
              "forward_attributes": {
               "attributes": {
                "source.uid": {
                 "string_value": "kubernetes://myclient-c58c9c46d-nwz8v.default"
                }
               }
              },
              "transport": {
               "check_cluster": "outbound|15004||istio-policy.istio-system.svc.cluster.local",
               "network_fail_policy": {
                "policy": "FAIL_CLOSE"
               },
               "report_cluster": "outbound|15004||istio-telemetry.istio-system.svc.cluster.local",
               "attributes_for_mixer_proxy": {
                "attributes": {
                 "source.uid": {
                  "string_value": "kubernetes://myclient-c58c9c46d-nwz8v.default"
                 }
                }
               }
              },
              "service_configs": {
               "default": {
                "disable_check_calls": true
               }
              }
             },
             "name": "mixer"
            },
            {
             "name": "envoy.cors"
            },
            {
             "name": "envoy.fault"
            },
            {
             "name": "envoy.router"
            }
           ],
           "tracing": {
            "overall_sampling": {
             "value": 100
            },
            "random_sampling": {
             "value": 100
            },
            "client_sampling": {
             "value": 100
            },
            "operation_name": "EGRESS"
           }
          }
         }
        ]
       }
      ],
      "deprecated_v1": {
       "bind_to_port": false
      }
     },
     "last_updated": "2018-11-13T14:36:31.679Z"
    },
    {
     "version_info": "2018-11-13T14:36:19Z/12",
     "listener": {
      "name": "0.0.0.0_9093",
      "address": {
       "socket_address": {
        "address": "0.0.0.0",
        "port_value": 9093
       }
      },
      "filter_chains": [
       {
        "filters": [
         {
          "name": "envoy.http_connection_manager",
          "config": {
           "use_remote_address": false,
           "stat_prefix": "0.0.0.0_9093",
           "rds": {
            "route_config_name": "9093",
            "config_source": {
             "ads": {}
            }
           },
           "stream_idle_timeout": "0s",
           "generate_request_id": true,
           "upgrade_configs": [
            {
             "upgrade_type": "websocket"
            }
           ],
           "access_log": [
            {
             "name": "envoy.file_access_log",
             "config": {
              "path": "/dev/stdout",
              "format": "[%START_TIME%] \"%REQ(:METHOD)% %REQ(X-ENVOY-ORIGINAL-PATH?:PATH)% %PROTOCOL%\" %RESPONSE_CODE% %RESPONSE_FLAGS% %BYTES_RECEIVED% %BYTES_SENT% %DURATION% %RESP(X-ENVOY-UPSTREAM-SERVICE-TIME)% \"%REQ(X-FORWARDED-FOR)%\" \"%REQ(USER-AGENT)%\" \"%REQ(X-REQUEST-ID)%\" \"%REQ(:AUTHORITY)%\" \"%UPSTREAM_HOST%\" %UPSTREAM_CLUSTER% %UPSTREAM_LOCAL_ADDRESS% %DOWNSTREAM_LOCAL_ADDRESS% %DOWNSTREAM_REMOTE_ADDRESS% %REQUESTED_SERVER_NAME%\n"
             }
            }
           ],
           "http_filters": [
            {
             "name": "mixer",
             "config": {
              "transport": {
               "check_cluster": "outbound|15004||istio-policy.istio-system.svc.cluster.local",
               "network_fail_policy": {
                "policy": "FAIL_CLOSE"
               },
               "report_cluster": "outbound|15004||istio-telemetry.istio-system.svc.cluster.local",
               "attributes_for_mixer_proxy": {
                "attributes": {
                 "source.uid": {
                  "string_value": "kubernetes://myclient-c58c9c46d-nwz8v.default"
                 }
                }
               }
              },
              "service_configs": {
               "default": {
                "disable_check_calls": true
               }
              },
              "default_destination_service": "default",
              "mixer_attributes": {
               "attributes": {
                "context.reporter.uid": {
                 "string_value": "kubernetes://myclient-c58c9c46d-nwz8v.default"
                },
                "source.uid": {
                 "string_value": "kubernetes://myclient-c58c9c46d-nwz8v.default"
                },
                "context.reporter.kind": {
                 "string_value": "outbound"
                },
                "source.namespace": {
                 "string_value": "default"
                }
               }
              },
              "forward_attributes": {
               "attributes": {
                "source.uid": {
                 "string_value": "kubernetes://myclient-c58c9c46d-nwz8v.default"
                }
               }
              }
             }
            },
            {
             "name": "envoy.cors"
            },
            {
             "name": "envoy.fault"
            },
            {
             "name": "envoy.router"
            }
           ],
           "tracing": {
            "overall_sampling": {
             "value": 100
            },
            "random_sampling": {
             "value": 100
            },
            "operation_name": "EGRESS",
            "client_sampling": {
             "value": 100
            }
           }
          }
         }
        ]
       }
      ],
      "deprecated_v1": {
       "bind_to_port": false
      }
     },
     "last_updated": "2018-11-13T14:36:31.681Z"
    },
    {
     "version_info": "2018-11-13T14:36:19Z/12",
     "listener": {
      "name": "0.0.0.0_9901",
      "address": {
       "socket_address": {
        "address": "0.0.0.0",
        "port_value": 9901
       }
      },
      "filter_chains": [
       {
        "filters": [
         {
          "name": "envoy.http_connection_manager",
          "config": {
           "http_filters": [
            {
             "name": "mixer",
             "config": {
              "service_configs": {
               "default": {
                "disable_check_calls": true
               }
              },
              "transport": {
               "attributes_for_mixer_proxy": {
                "attributes": {
                 "source.uid": {
                  "string_value": "kubernetes://myclient-c58c9c46d-nwz8v.default"
                 }
                }
               },
               "check_cluster": "outbound|15004||istio-policy.istio-system.svc.cluster.local",
               "network_fail_policy": {
                "policy": "FAIL_CLOSE"
               },
               "report_cluster": "outbound|15004||istio-telemetry.istio-system.svc.cluster.local"
              },
              "default_destination_service": "default",
              "mixer_attributes": {
               "attributes": {
                "source.namespace": {
                 "string_value": "default"
                },
                "context.reporter.uid": {
                 "string_value": "kubernetes://myclient-c58c9c46d-nwz8v.default"
                },
                "source.uid": {
                 "string_value": "kubernetes://myclient-c58c9c46d-nwz8v.default"
                },
                "context.reporter.kind": {
                 "string_value": "outbound"
                }
               }
              },
              "forward_attributes": {
               "attributes": {
                "source.uid": {
                 "string_value": "kubernetes://myclient-c58c9c46d-nwz8v.default"
                }
               }
              }
             }
            },
            {
             "name": "envoy.cors"
            },
            {
             "name": "envoy.fault"
            },
            {
             "name": "envoy.router"
            }
           ],
           "tracing": {
            "random_sampling": {
             "value": 100
            },
            "overall_sampling": {
             "value": 100
            },
            "client_sampling": {
             "value": 100
            },
            "operation_name": "EGRESS"
           },
           "rds": {
            "route_config_name": "9901",
            "config_source": {
             "ads": {}
            }
           },
           "use_remote_address": false,
           "stat_prefix": "0.0.0.0_9901",
           "generate_request_id": true,
           "stream_idle_timeout": "0s",
           "upgrade_configs": [
            {
             "upgrade_type": "websocket"
            }
           ],
           "access_log": [
            {
             "name": "envoy.file_access_log",
             "config": {
              "path": "/dev/stdout",
              "format": "[%START_TIME%] \"%REQ(:METHOD)% %REQ(X-ENVOY-ORIGINAL-PATH?:PATH)% %PROTOCOL%\" %RESPONSE_CODE% %RESPONSE_FLAGS% %BYTES_RECEIVED% %BYTES_SENT% %DURATION% %RESP(X-ENVOY-UPSTREAM-SERVICE-TIME)% \"%REQ(X-FORWARDED-FOR)%\" \"%REQ(USER-AGENT)%\" \"%REQ(X-REQUEST-ID)%\" \"%REQ(:AUTHORITY)%\" \"%UPSTREAM_HOST%\" %UPSTREAM_CLUSTER% %UPSTREAM_LOCAL_ADDRESS% %DOWNSTREAM_LOCAL_ADDRESS% %DOWNSTREAM_REMOTE_ADDRESS% %REQUESTED_SERVER_NAME%\n"
             }
            }
           ]
          }
         }
        ]
       }
      ],
      "deprecated_v1": {
       "bind_to_port": false
      }
     },
     "last_updated": "2018-11-13T14:36:31.690Z"
    },
    {
     "version_info": "2018-11-13T14:36:19Z/12",
     "listener": {
      "name": "0.0.0.0_9090",
      "address": {
       "socket_address": {
        "address": "0.0.0.0",
        "port_value": 9090
       }
      },
      "filter_chains": [
       {
        "filters": [
         {
          "name": "envoy.http_connection_manager",
          "config": {
           "tracing": {
            "overall_sampling": {
             "value": 100
            },
            "random_sampling": {
             "value": 100
            },
            "client_sampling": {
             "value": 100
            },
            "operation_name": "EGRESS"
           },
           "rds": {
            "config_source": {
             "ads": {}
            },
            "route_config_name": "9090"
           },
           "stat_prefix": "0.0.0.0_9090",
           "use_remote_address": false,
           "generate_request_id": true,
           "stream_idle_timeout": "0s",
           "upgrade_configs": [
            {
             "upgrade_type": "websocket"
            }
           ],
           "access_log": [
            {
             "name": "envoy.file_access_log",
             "config": {
              "path": "/dev/stdout",
              "format": "[%START_TIME%] \"%REQ(:METHOD)% %REQ(X-ENVOY-ORIGINAL-PATH?:PATH)% %PROTOCOL%\" %RESPONSE_CODE% %RESPONSE_FLAGS% %BYTES_RECEIVED% %BYTES_SENT% %DURATION% %RESP(X-ENVOY-UPSTREAM-SERVICE-TIME)% \"%REQ(X-FORWARDED-FOR)%\" \"%REQ(USER-AGENT)%\" \"%REQ(X-REQUEST-ID)%\" \"%REQ(:AUTHORITY)%\" \"%UPSTREAM_HOST%\" %UPSTREAM_CLUSTER% %UPSTREAM_LOCAL_ADDRESS% %DOWNSTREAM_LOCAL_ADDRESS% %DOWNSTREAM_REMOTE_ADDRESS% %REQUESTED_SERVER_NAME%\n"
             }
            }
           ],
           "http_filters": [
            {
             "name": "mixer",
             "config": {
              "default_destination_service": "default",
              "mixer_attributes": {
               "attributes": {
                "context.reporter.uid": {
                 "string_value": "kubernetes://myclient-c58c9c46d-nwz8v.default"
                },
                "source.uid": {
                 "string_value": "kubernetes://myclient-c58c9c46d-nwz8v.default"
                },
                "context.reporter.kind": {
                 "string_value": "outbound"
                },
                "source.namespace": {
                 "string_value": "default"
                }
               }
              },
              "forward_attributes": {
               "attributes": {
                "source.uid": {
                 "string_value": "kubernetes://myclient-c58c9c46d-nwz8v.default"
                }
               }
              },
              "transport": {
               "check_cluster": "outbound|15004||istio-policy.istio-system.svc.cluster.local",
               "network_fail_policy": {
                "policy": "FAIL_CLOSE"
               },
               "report_cluster": "outbound|15004||istio-telemetry.istio-system.svc.cluster.local",
               "attributes_for_mixer_proxy": {
                "attributes": {
                 "source.uid": {
                  "string_value": "kubernetes://myclient-c58c9c46d-nwz8v.default"
                 }
                }
               }
              },
              "service_configs": {
               "default": {
                "disable_check_calls": true
               }
              }
             }
            },
            {
             "name": "envoy.cors"
            },
            {
             "name": "envoy.fault"
            },
            {
             "name": "envoy.router"
            }
           ]
          }
         }
        ]
       }
      ],
      "deprecated_v1": {
       "bind_to_port": false
      }
     },
     "last_updated": "2018-11-13T14:36:31.691Z"
    },
    {
     "version_info": "2018-11-13T14:36:19Z/12",
     "listener": {
      "name": "0.0.0.0_15030",
      "address": {
       "socket_address": {
        "address": "0.0.0.0",
        "port_value": 15030
       }
      },
      "filter_chains": [
       {
        "filters": [
         {
          "name": "envoy.http_connection_manager",
          "config": {
           "stat_prefix": "0.0.0.0_15030",
           "rds": {
            "route_config_name": "15030",
            "config_source": {
             "ads": {}
            }
           },
           "use_remote_address": false,
           "generate_request_id": true,
           "stream_idle_timeout": "0s",
           "upgrade_configs": [
            {
             "upgrade_type": "websocket"
            }
           ],
           "access_log": [
            {
             "config": {
              "path": "/dev/stdout",
              "format": "[%START_TIME%] \"%REQ(:METHOD)% %REQ(X-ENVOY-ORIGINAL-PATH?:PATH)% %PROTOCOL%\" %RESPONSE_CODE% %RESPONSE_FLAGS% %BYTES_RECEIVED% %BYTES_SENT% %DURATION% %RESP(X-ENVOY-UPSTREAM-SERVICE-TIME)% \"%REQ(X-FORWARDED-FOR)%\" \"%REQ(USER-AGENT)%\" \"%REQ(X-REQUEST-ID)%\" \"%REQ(:AUTHORITY)%\" \"%UPSTREAM_HOST%\" %UPSTREAM_CLUSTER% %UPSTREAM_LOCAL_ADDRESS% %DOWNSTREAM_LOCAL_ADDRESS% %DOWNSTREAM_REMOTE_ADDRESS% %REQUESTED_SERVER_NAME%\n"
             },
             "name": "envoy.file_access_log"
            }
           ],
           "http_filters": [
            {
             "name": "mixer",
             "config": {
              "transport": {
               "check_cluster": "outbound|15004||istio-policy.istio-system.svc.cluster.local",
               "network_fail_policy": {
                "policy": "FAIL_CLOSE"
               },
               "report_cluster": "outbound|15004||istio-telemetry.istio-system.svc.cluster.local",
               "attributes_for_mixer_proxy": {
                "attributes": {
                 "source.uid": {
                  "string_value": "kubernetes://myclient-c58c9c46d-nwz8v.default"
                 }
                }
               }
              },
              "service_configs": {
               "default": {
                "disable_check_calls": true
               }
              },
              "default_destination_service": "default",
              "mixer_attributes": {
               "attributes": {
                "context.reporter.kind": {
                 "string_value": "outbound"
                },
                "source.namespace": {
                 "string_value": "default"
                },
                "context.reporter.uid": {
                 "string_value": "kubernetes://myclient-c58c9c46d-nwz8v.default"
                },
                "source.uid": {
                 "string_value": "kubernetes://myclient-c58c9c46d-nwz8v.default"
                }
               }
              },
              "forward_attributes": {
               "attributes": {
                "source.uid": {
                 "string_value": "kubernetes://myclient-c58c9c46d-nwz8v.default"
                }
               }
              }
             }
            },
            {
             "name": "envoy.cors"
            },
            {
             "name": "envoy.fault"
            },
            {
             "name": "envoy.router"
            }
           ],
           "tracing": {
            "client_sampling": {
             "value": 100
            },
            "operation_name": "EGRESS",
            "random_sampling": {
             "value": 100
            },
            "overall_sampling": {
             "value": 100
            }
           }
          }
         }
        ]
       }
      ],
      "deprecated_v1": {
       "bind_to_port": false
      }
     },
     "last_updated": "2018-11-13T14:36:31.693Z"
    },
    {
     "version_info": "2018-11-13T14:36:19Z/12",
     "listener": {
      "name": "0.0.0.0_8080",
      "address": {
       "socket_address": {
        "address": "0.0.0.0",
        "port_value": 8080
       }
      },
      "filter_chains": [
       {
        "filters": [
         {
          "name": "envoy.http_connection_manager",
          "config": {
           "tracing": {
            "overall_sampling": {
             "value": 100
            },
            "random_sampling": {
             "value": 100
            },
            "client_sampling": {
             "value": 100
            },
            "operation_name": "EGRESS"
           },
           "stat_prefix": "0.0.0.0_8080",
           "rds": {
            "route_config_name": "8080",
            "config_source": {
             "ads": {}
            }
           },
           "use_remote_address": false,
           "generate_request_id": true,
           "stream_idle_timeout": "0s",
           "upgrade_configs": [
            {
             "upgrade_type": "websocket"
            }
           ],
           "access_log": [
            {
             "name": "envoy.file_access_log",
             "config": {
              "path": "/dev/stdout",
              "format": "[%START_TIME%] \"%REQ(:METHOD)% %REQ(X-ENVOY-ORIGINAL-PATH?:PATH)% %PROTOCOL%\" %RESPONSE_CODE% %RESPONSE_FLAGS% %BYTES_RECEIVED% %BYTES_SENT% %DURATION% %RESP(X-ENVOY-UPSTREAM-SERVICE-TIME)% \"%REQ(X-FORWARDED-FOR)%\" \"%REQ(USER-AGENT)%\" \"%REQ(X-REQUEST-ID)%\" \"%REQ(:AUTHORITY)%\" \"%UPSTREAM_HOST%\" %UPSTREAM_CLUSTER% %UPSTREAM_LOCAL_ADDRESS% %DOWNSTREAM_LOCAL_ADDRESS% %DOWNSTREAM_REMOTE_ADDRESS% %REQUESTED_SERVER_NAME%\n"
             }
            }
           ],
           "http_filters": [
            {
             "name": "mixer",
             "config": {
              "transport": {
               "network_fail_policy": {
                "policy": "FAIL_CLOSE"
               },
               "report_cluster": "outbound|15004||istio-telemetry.istio-system.svc.cluster.local",
               "attributes_for_mixer_proxy": {
                "attributes": {
                 "source.uid": {
                  "string_value": "kubernetes://myclient-c58c9c46d-nwz8v.default"
                 }
                }
               },
               "check_cluster": "outbound|15004||istio-policy.istio-system.svc.cluster.local"
              },
              "service_configs": {
               "default": {
                "disable_check_calls": true
               }
              },
              "default_destination_service": "default",
              "mixer_attributes": {
               "attributes": {
                "source.uid": {
                 "string_value": "kubernetes://myclient-c58c9c46d-nwz8v.default"
                },
                "context.reporter.kind": {
                 "string_value": "outbound"
                },
                "source.namespace": {
                 "string_value": "default"
                },
                "context.reporter.uid": {
                 "string_value": "kubernetes://myclient-c58c9c46d-nwz8v.default"
                }
               }
              },
              "forward_attributes": {
               "attributes": {
                "source.uid": {
                 "string_value": "kubernetes://myclient-c58c9c46d-nwz8v.default"
                }
               }
              }
             }
            },
            {
             "name": "envoy.cors"
            },
            {
             "name": "envoy.fault"
            },
            {
             "name": "envoy.router"
            }
           ]
          }
         }
        ]
       }
      ],
      "deprecated_v1": {
       "bind_to_port": false
      }
     },
     "last_updated": "2018-11-13T14:36:31.694Z"
    },
    {
     "version_info": "2018-11-13T14:36:19Z/12",
     "listener": {
      "name": "0.0.0.0_80",
      "address": {
       "socket_address": {
        "address": "0.0.0.0",
        "port_value": 80
       }
      },
      "filter_chains": [
       {
        "filters": [
         {
          "name": "envoy.http_connection_manager",
          "config": {
           "upgrade_configs": [
            {
             "upgrade_type": "websocket"
            }
           ],
           "access_log": [
            {
             "name": "envoy.file_access_log",
             "config": {
              "path": "/dev/stdout",
              "format": "[%START_TIME%] \"%REQ(:METHOD)% %REQ(X-ENVOY-ORIGINAL-PATH?:PATH)% %PROTOCOL%\" %RESPONSE_CODE% %RESPONSE_FLAGS% %BYTES_RECEIVED% %BYTES_SENT% %DURATION% %RESP(X-ENVOY-UPSTREAM-SERVICE-TIME)% \"%REQ(X-FORWARDED-FOR)%\" \"%REQ(USER-AGENT)%\" \"%REQ(X-REQUEST-ID)%\" \"%REQ(:AUTHORITY)%\" \"%UPSTREAM_HOST%\" %UPSTREAM_CLUSTER% %UPSTREAM_LOCAL_ADDRESS% %DOWNSTREAM_LOCAL_ADDRESS% %DOWNSTREAM_REMOTE_ADDRESS% %REQUESTED_SERVER_NAME%\n"
             }
            }
           ],
           "http_filters": [
            {
             "name": "mixer",
             "config": {
              "transport": {
               "check_cluster": "outbound|15004||istio-policy.istio-system.svc.cluster.local",
               "network_fail_policy": {
                "policy": "FAIL_CLOSE"
               },
               "report_cluster": "outbound|15004||istio-telemetry.istio-system.svc.cluster.local",
               "attributes_for_mixer_proxy": {
                "attributes": {
                 "source.uid": {
                  "string_value": "kubernetes://myclient-c58c9c46d-nwz8v.default"
                 }
                }
               }
              },
              "service_configs": {
               "default": {
                "disable_check_calls": true
               }
              },
              "default_destination_service": "default",
              "mixer_attributes": {
               "attributes": {
                "source.uid": {
                 "string_value": "kubernetes://myclient-c58c9c46d-nwz8v.default"
                },
                "context.reporter.kind": {
                 "string_value": "outbound"
                },
                "source.namespace": {
                 "string_value": "default"
                },
                "context.reporter.uid": {
                 "string_value": "kubernetes://myclient-c58c9c46d-nwz8v.default"
                }
               }
              },
              "forward_attributes": {
               "attributes": {
                "source.uid": {
                 "string_value": "kubernetes://myclient-c58c9c46d-nwz8v.default"
                }
               }
              }
             }
            },
            {
             "name": "envoy.cors"
            },
            {
             "name": "envoy.fault"
            },
            {
             "name": "envoy.router"
            }
           ],
           "tracing": {
            "overall_sampling": {
             "value": 100
            },
            "random_sampling": {
             "value": 100
            },
            "client_sampling": {
             "value": 100
            },
            "operation_name": "EGRESS"
           },
           "use_remote_address": false,
           "rds": {
            "config_source": {
             "ads": {}
            },
            "route_config_name": "80"
           },
           "stat_prefix": "0.0.0.0_80",
           "generate_request_id": true,
           "stream_idle_timeout": "0s"
          }
         }
        ]
       }
      ],
      "deprecated_v1": {
       "bind_to_port": false
      }
     },
     "last_updated": "2018-11-13T14:36:31.696Z"
    },
    {
     "version_info": "2018-11-13T14:36:19Z/12",
     "listener": {
      "name": "0.0.0.0_9080",
      "address": {
       "socket_address": {
        "address": "0.0.0.0",
        "port_value": 9080
       }
      },
      "filter_chains": [
       {
        "filters": [
         {
          "name": "envoy.http_connection_manager",
          "config": {
           "access_log": [
            {
             "config": {
              "path": "/dev/stdout",
              "format": "[%START_TIME%] \"%REQ(:METHOD)% %REQ(X-ENVOY-ORIGINAL-PATH?:PATH)% %PROTOCOL%\" %RESPONSE_CODE% %RESPONSE_FLAGS% %BYTES_RECEIVED% %BYTES_SENT% %DURATION% %RESP(X-ENVOY-UPSTREAM-SERVICE-TIME)% \"%REQ(X-FORWARDED-FOR)%\" \"%REQ(USER-AGENT)%\" \"%REQ(X-REQUEST-ID)%\" \"%REQ(:AUTHORITY)%\" \"%UPSTREAM_HOST%\" %UPSTREAM_CLUSTER% %UPSTREAM_LOCAL_ADDRESS% %DOWNSTREAM_LOCAL_ADDRESS% %DOWNSTREAM_REMOTE_ADDRESS% %REQUESTED_SERVER_NAME%\n"
             },
             "name": "envoy.file_access_log"
            }
           ],
           "http_filters": [
            {
             "config": {
              "transport": {
               "check_cluster": "outbound|15004||istio-policy.istio-system.svc.cluster.local",
               "network_fail_policy": {
                "policy": "FAIL_CLOSE"
               },
               "report_cluster": "outbound|15004||istio-telemetry.istio-system.svc.cluster.local",
               "attributes_for_mixer_proxy": {
                "attributes": {
                 "source.uid": {
                  "string_value": "kubernetes://myclient-c58c9c46d-nwz8v.default"
                 }
                }
               }
              },
              "service_configs": {
               "default": {
                "disable_check_calls": true
               }
              },
              "default_destination_service": "default",
              "mixer_attributes": {
               "attributes": {
                "context.reporter.uid": {
                 "string_value": "kubernetes://myclient-c58c9c46d-nwz8v.default"
                },
                "source.uid": {
                 "string_value": "kubernetes://myclient-c58c9c46d-nwz8v.default"
                },
                "context.reporter.kind": {
                 "string_value": "outbound"
                },
                "source.namespace": {
                 "string_value": "default"
                }
               }
              },
              "forward_attributes": {
               "attributes": {
                "source.uid": {
                 "string_value": "kubernetes://myclient-c58c9c46d-nwz8v.default"
                }
               }
              }
             },
             "name": "mixer"
            },
            {
             "name": "envoy.cors"
            },
            {
             "name": "envoy.fault"
            },
            {
             "name": "envoy.router"
            }
           ],
           "tracing": {
            "overall_sampling": {
             "value": 100
            },
            "random_sampling": {
             "value": 100
            },
            "operation_name": "EGRESS",
            "client_sampling": {
             "value": 100
            }
           },
           "use_remote_address": false,
           "stat_prefix": "0.0.0.0_9080",
           "rds": {
            "config_source": {
             "ads": {}
            },
            "route_config_name": "9080"
           },
           "generate_request_id": true,
           "stream_idle_timeout": "0s",
           "upgrade_configs": [
            {
             "upgrade_type": "websocket"
            }
           ]
          }
         }
        ]
       }
      ],
      "deprecated_v1": {
       "bind_to_port": false
      }
     },
     "last_updated": "2018-11-13T14:36:31.700Z"
    },
    {
     "version_info": "2018-11-13T14:36:19Z/12",
     "listener": {
      "name": "172.30.79.10_15020",
      "address": {
       "socket_address": {
        "address": "172.30.79.10",
        "port_value": 15020
       }
      },
      "filter_chains": [
       {
        "filters": [
         {
          "name": "envoy.tcp_proxy",
          "config": {
           "stat_prefix": "inbound|15020||mgmtCluster",
           "cluster": "inbound|15020||mgmtCluster",
           "access_log": [
            {
             "name": "envoy.file_access_log",
             "config": {
              "path": "/dev/stdout",
              "format": "[%START_TIME%] %RESPONSE_FLAGS% %BYTES_RECEIVED% %BYTES_SENT% %DURATION% \"%UPSTREAM_HOST%\" %UPSTREAM_CLUSTER% %UPSTREAM_LOCAL_ADDRESS% %DOWNSTREAM_LOCAL_ADDRESS% %DOWNSTREAM_REMOTE_ADDRESS% %REQUESTED_SERVER_NAME%\n"
             }
            }
           ]
          }
         }
        ]
       }
      ],
      "deprecated_v1": {
       "bind_to_port": false
      }
     },
     "last_updated": "2018-11-13T14:36:31.700Z"
    },
    {
     "version_info": "2018-11-13T14:36:19Z/12",
     "listener": {
      "name": "virtual",
      "address": {
       "socket_address": {
        "address": "0.0.0.0",
        "port_value": 15001
       }
      },
      "filter_chains": [
       {
        "filters": [
         {
          "name": "envoy.tcp_proxy",
          "config": {
           "stat_prefix": "PassthroughCluster",
           "cluster": "PassthroughCluster"
          }
         }
        ]
       }
      ],
      "use_original_dst": true
     },
     "last_updated": "2018-11-13T14:36:31.700Z"
    }
   ]
  },
  {
   "@type": "type.googleapis.com/envoy.admin.v2alpha.RoutesConfigDump",
   "static_route_configs": [
    {
     "route_config": {
      "name": "inbound|80||myclient.default.svc.cluster.local",
      "virtual_hosts": [
       {
        "name": "inbound|http|80",
        "domains": [
         "*"
        ],
        "routes": [
         {
          "match": {
           "prefix": "/"
          },
          "route": {
           "cluster": "inbound|80||myclient.default.svc.cluster.local",
           "timeout": "0s",
           "max_grpc_timeout": "0s"
          },
          "decorator": {
           "operation": "myclient.default.svc.cluster.local:80/*"
          },
          "per_filter_config": {
           "mixer": {
            "mixer_attributes": {
             "attributes": {
              "destination.service.uid": {
               "string_value": "istio://default/services/myclient"
              },
              "destination.service.host": {
               "string_value": "myclient.default.svc.cluster.local"
              },
              "destination.service.name": {
               "string_value": "myclient"
              },
              "destination.service.namespace": {
               "string_value": "default"
              }
             }
            }
           }
          }
         }
        ]
       }
      ],
      "validate_clusters": false
     },
     "last_updated": "2018-11-13T14:36:31.645Z"
    },
    {
     "route_config": {
      "name": "inbound|80||myclient.default.svc.cluster.local",
      "virtual_hosts": [
       {
        "name": "inbound|http|80",
        "domains": [
         "*"
        ],
        "routes": [
         {
          "match": {
           "prefix": "/"
          },
          "route": {
           "cluster": "inbound|80||myclient.default.svc.cluster.local",
           "timeout": "0s",
           "max_grpc_timeout": "0s"
          },
          "decorator": {
           "operation": "myclient.default.svc.cluster.local:80/*"
          },
          "per_filter_config": {
           "mixer": {
            "mixer_attributes": {
             "attributes": {
              "destination.service.name": {
               "string_value": "myclient"
              },
              "destination.service.namespace": {
               "string_value": "default"
              },
              "destination.service.uid": {
               "string_value": "istio://default/services/myclient"
              },
              "destination.service.host": {
               "string_value": "myclient.default.svc.cluster.local"
              }
             }
            }
           }
          }
         }
        ]
       }
      ],
      "validate_clusters": false
     },
     "last_updated": "2018-11-13T14:36:31.648Z"
    },
    {
     "route_config": {
      "virtual_hosts": [
       {
        "name": "backend",
        "domains": [
         "*"
        ],
        "routes": [
         {
          "match": {
           "prefix": "/stats/prometheus"
          },
          "route": {
           "cluster": "prometheus_stats"
          }
         }
        ]
       }
      ]
     },
     "last_updated": "2018-11-13T14:36:30.028Z"
    }
   ],
   "dynamic_route_configs": [
    {
     "version_info": "2018-11-13T14:36:19Z/12",
     "route_config": {
      "name": "9080",
      "virtual_hosts": [
       {
        "name": "details.default.svc.cluster.local:9080",
        "domains": [
         "details.default.svc.cluster.local",
         "details.default.svc.cluster.local:9080",
         "details",
         "details:9080",
         "details.default.svc.cluster",
         "details.default.svc.cluster:9080",
         "details.default.svc",
         "details.default.svc:9080",
         "details.default",
         "details.default:9080",
         "172.21.69.151",
         "172.21.69.151:9080"
        ],
        "routes": [
         {
          "match": {
           "prefix": "/"
          },
          "route": {
           "cluster": "outbound|9080||details.default.svc.cluster.local",
           "timeout": "0s",
           "max_grpc_timeout": "0s"
          },
          "decorator": {
           "operation": "details.default.svc.cluster.local:9080/*"
          },
          "per_filter_config": {
           "mixer": {
            "disable_check_calls": true,
            "forward_attributes": {
             "attributes": {
              "destination.service.uid": {
               "string_value": "istio://default/services/details"
              },
              "destination.service.host": {
               "string_value": "details.default.svc.cluster.local"
              },
              "destination.service.namespace": {
               "string_value": "default"
              },
              "destination.service.name": {
               "string_value": "details"
              }
             }
            },
            "mixer_attributes": {
             "attributes": {
              "destination.service.namespace": {
               "string_value": "default"
              },
              "destination.service.name": {
               "string_value": "details"
              },
              "destination.service.host": {
               "string_value": "details.default.svc.cluster.local"
              },
              "destination.service.uid": {
               "string_value": "istio://default/services/details"
              }
             }
            }
           }
          }
         }
        ]
       },
       {
        "name": "productpage.default.svc.cluster.local:9080",
        "domains": [
         "productpage.default.svc.cluster.local",
         "productpage.default.svc.cluster.local:9080",
         "productpage",
         "productpage:9080",
         "productpage.default.svc.cluster",
         "productpage.default.svc.cluster:9080",
         "productpage.default.svc",
         "productpage.default.svc:9080",
         "productpage.default",
         "productpage.default:9080",
         "172.21.141.113",
         "172.21.141.113:9080"
        ],
        "routes": [
         {
          "match": {
           "prefix": "/"
          },
          "route": {
           "cluster": "outbound|9080||productpage.default.svc.cluster.local",
           "timeout": "0s",
           "max_grpc_timeout": "0s"
          },
          "decorator": {
           "operation": "productpage.default.svc.cluster.local:9080/*"
          },
          "per_filter_config": {
           "mixer": {
            "forward_attributes": {
             "attributes": {
              "destination.service.namespace": {
               "string_value": "default"
              },
              "destination.service.name": {
               "string_value": "productpage"
              },
              "destination.service.uid": {
               "string_value": "istio://default/services/productpage"
              },
              "destination.service.host": {
               "string_value": "productpage.default.svc.cluster.local"
              }
             }
            },
            "mixer_attributes": {
             "attributes": {
              "destination.service.namespace": {
               "string_value": "default"
              },
              "destination.service.name": {
               "string_value": "productpage"
              },
              "destination.service.uid": {
               "string_value": "istio://default/services/productpage"
              },
              "destination.service.host": {
               "string_value": "productpage.default.svc.cluster.local"
              }
             }
            },
            "disable_check_calls": true
           }
          }
         }
        ]
       },
       {
        "name": "reviews.default.svc.cluster.local:9080",
        "domains": [
         "reviews.default.svc.cluster.local",
         "reviews.default.svc.cluster.local:9080",
         "reviews",
         "reviews:9080",
         "reviews.default.svc.cluster",
         "reviews.default.svc.cluster:9080",
         "reviews.default.svc",
         "reviews.default.svc:9080",
         "reviews.default",
         "reviews.default:9080",
         "172.21.32.133",
         "172.21.32.133:9080"
        ],
        "routes": [
         {
          "match": {
           "prefix": "/"
          },
          "route": {
           "cluster": "outbound|9080||reviews.default.svc.cluster.local",
           "timeout": "0s",
           "max_grpc_timeout": "0s"
          },
          "decorator": {
           "operation": "reviews.default.svc.cluster.local:9080/*"
          },
          "per_filter_config": {
           "mixer": {
            "forward_attributes": {
             "attributes": {
              "destination.service.name": {
               "string_value": "reviews"
              },
              "destination.service.namespace": {
               "string_value": "default"
              },
              "destination.service.host": {
               "string_value": "reviews.default.svc.cluster.local"
              },
              "destination.service.uid": {
               "string_value": "istio://default/services/reviews"
              }
             }
            },
            "mixer_attributes": {
             "attributes": {
              "destination.service.host": {
               "string_value": "reviews.default.svc.cluster.local"
              },
              "destination.service.uid": {
               "string_value": "istio://default/services/reviews"
              },
              "destination.service.name": {
               "string_value": "reviews"
              },
              "destination.service.namespace": {
               "string_value": "default"
              }
             }
            },
            "disable_check_calls": true
           }
          }
         }
        ]
       }
      ],
      "validate_clusters": false
     },
     "last_updated": "2018-11-13T15:53:05.911Z"
    },
    {
     "version_info": "2018-11-13T14:36:19Z/12",
     "route_config": {
      "name": "8080",
      "virtual_hosts": [
       {
        "name": "istio-pilot.istio-system.svc.cluster.local:8080",
        "domains": [
         "istio-pilot.istio-system.svc.cluster.local",
         "istio-pilot.istio-system.svc.cluster.local:8080",
         "istio-pilot.istio-system",
         "istio-pilot.istio-system:8080",
         "istio-pilot.istio-system.svc.cluster",
         "istio-pilot.istio-system.svc.cluster:8080",
         "istio-pilot.istio-system.svc",
         "istio-pilot.istio-system.svc:8080",
         "172.21.245.199",
         "172.21.245.199:8080"
        ],
        "routes": [
         {
          "match": {
           "prefix": "/"
          },
          "route": {
           "cluster": "outbound|8080||istio-pilot.istio-system.svc.cluster.local",
           "timeout": "0s",
           "max_grpc_timeout": "0s"
          },
          "decorator": {
           "operation": "istio-pilot.istio-system.svc.cluster.local:8080/*"
          },
          "per_filter_config": {
           "mixer": {
            "forward_attributes": {
             "attributes": {
              "destination.service.uid": {
               "string_value": "istio://istio-system/services/istio-pilot"
              },
              "destination.service.host": {
               "string_value": "istio-pilot.istio-system.svc.cluster.local"
              },
              "destination.service.namespace": {
               "string_value": "istio-system"
              },
              "destination.service.name": {
               "string_value": "istio-pilot"
              }
             }
            },
            "mixer_attributes": {
             "attributes": {
              "destination.service.namespace": {
               "string_value": "istio-system"
              },
              "destination.service.name": {
               "string_value": "istio-pilot"
              },
              "destination.service.uid": {
               "string_value": "istio://istio-system/services/istio-pilot"
              },
              "destination.service.host": {
               "string_value": "istio-pilot.istio-system.svc.cluster.local"
              }
             }
            },
            "disable_check_calls": true
           }
          }
         }
        ]
       }
      ],
      "validate_clusters": false
     },
     "last_updated": "2018-11-13T15:53:05.911Z"
    },
    {
     "version_info": "2018-11-13T14:36:19Z/12",
     "route_config": {
      "name": "15032",
      "virtual_hosts": [
       {
        "name": "istio-ingressgateway.istio-system.svc.cluster.local:15032",
        "domains": [
         "istio-ingressgateway.istio-system.svc.cluster.local",
         "istio-ingressgateway.istio-system.svc.cluster.local:15032",
         "istio-ingressgateway.istio-system",
         "istio-ingressgateway.istio-system:15032",
         "istio-ingressgateway.istio-system.svc.cluster",
         "istio-ingressgateway.istio-system.svc.cluster:15032",
         "istio-ingressgateway.istio-system.svc",
         "istio-ingressgateway.istio-system.svc:15032",
         "172.21.179.14",
         "172.21.179.14:15032"
        ],
        "routes": [
         {
          "match": {
           "prefix": "/"
          },
          "route": {
           "cluster": "outbound|15032||istio-ingressgateway.istio-system.svc.cluster.local",
           "timeout": "0s",
           "max_grpc_timeout": "0s"
          },
          "decorator": {
           "operation": "istio-ingressgateway.istio-system.svc.cluster.local:15032/*"
          },
          "per_filter_config": {
           "mixer": {
            "forward_attributes": {
             "attributes": {
              "destination.service.host": {
               "string_value": "istio-ingressgateway.istio-system.svc.cluster.local"
              },
              "destination.service.uid": {
               "string_value": "istio://istio-system/services/istio-ingressgateway"
              },
              "destination.service.namespace": {
               "string_value": "istio-system"
              },
              "destination.service.name": {
               "string_value": "istio-ingressgateway"
              }
             }
            },
            "mixer_attributes": {
             "attributes": {
              "destination.service.namespace": {
               "string_value": "istio-system"
              },
              "destination.service.name": {
               "string_value": "istio-ingressgateway"
              },
              "destination.service.uid": {
               "string_value": "istio://istio-system/services/istio-ingressgateway"
              },
              "destination.service.host": {
               "string_value": "istio-ingressgateway.istio-system.svc.cluster.local"
              }
             }
            },
            "disable_check_calls": true
           }
          }
         }
        ]
       }
      ],
      "validate_clusters": false
     },
     "last_updated": "2018-11-13T15:53:05.912Z"
    },
    {
     "version_info": "2018-11-13T14:36:19Z/12",
     "route_config": {
      "name": "15031",
      "virtual_hosts": [
       {
        "name": "istio-ingressgateway.istio-system.svc.cluster.local:15031",
        "domains": [
         "istio-ingressgateway.istio-system.svc.cluster.local",
         "istio-ingressgateway.istio-system.svc.cluster.local:15031",
         "istio-ingressgateway.istio-system",
         "istio-ingressgateway.istio-system:15031",
         "istio-ingressgateway.istio-system.svc.cluster",
         "istio-ingressgateway.istio-system.svc.cluster:15031",
         "istio-ingressgateway.istio-system.svc",
         "istio-ingressgateway.istio-system.svc:15031",
         "172.21.179.14",
         "172.21.179.14:15031"
        ],
        "routes": [
         {
          "match": {
           "prefix": "/"
          },
          "route": {
           "cluster": "outbound|15031||istio-ingressgateway.istio-system.svc.cluster.local",
           "timeout": "0s",
           "max_grpc_timeout": "0s"
          },
          "decorator": {
           "operation": "istio-ingressgateway.istio-system.svc.cluster.local:15031/*"
          },
          "per_filter_config": {
           "mixer": {
            "mixer_attributes": {
             "attributes": {
              "destination.service.namespace": {
               "string_value": "istio-system"
              },
              "destination.service.name": {
               "string_value": "istio-ingressgateway"
              },
              "destination.service.uid": {
               "string_value": "istio://istio-system/services/istio-ingressgateway"
              },
              "destination.service.host": {
               "string_value": "istio-ingressgateway.istio-system.svc.cluster.local"
              }
             }
            },
            "disable_check_calls": true,
            "forward_attributes": {
             "attributes": {
              "destination.service.name": {
               "string_value": "istio-ingressgateway"
              },
              "destination.service.namespace": {
               "string_value": "istio-system"
              },
              "destination.service.host": {
               "string_value": "istio-ingressgateway.istio-system.svc.cluster.local"
              },
              "destination.service.uid": {
               "string_value": "istio://istio-system/services/istio-ingressgateway"
              }
             }
            }
           }
          }
         }
        ]
       }
      ],
      "validate_clusters": false
     },
     "last_updated": "2018-11-13T15:53:05.912Z"
    },
    {
     "version_info": "2018-11-13T14:36:19Z/12",
     "route_config": {
      "name": "15029",
      "virtual_hosts": [
       {
        "name": "istio-ingressgateway.istio-system.svc.cluster.local:15029",
        "domains": [
         "istio-ingressgateway.istio-system.svc.cluster.local",
         "istio-ingressgateway.istio-system.svc.cluster.local:15029",
         "istio-ingressgateway.istio-system",
         "istio-ingressgateway.istio-system:15029",
         "istio-ingressgateway.istio-system.svc.cluster",
         "istio-ingressgateway.istio-system.svc.cluster:15029",
         "istio-ingressgateway.istio-system.svc",
         "istio-ingressgateway.istio-system.svc:15029",
         "172.21.179.14",
         "172.21.179.14:15029"
        ],
        "routes": [
         {
          "match": {
           "prefix": "/"
          },
          "route": {
           "cluster": "outbound|15029||istio-ingressgateway.istio-system.svc.cluster.local",
           "timeout": "0s",
           "max_grpc_timeout": "0s"
          },
          "decorator": {
           "operation": "istio-ingressgateway.istio-system.svc.cluster.local:15029/*"
          },
          "per_filter_config": {
           "mixer": {
            "disable_check_calls": true,
            "forward_attributes": {
             "attributes": {
              "destination.service.namespace": {
               "string_value": "istio-system"
              },
              "destination.service.name": {
               "string_value": "istio-ingressgateway"
              },
              "destination.service.uid": {
               "string_value": "istio://istio-system/services/istio-ingressgateway"
              },
              "destination.service.host": {
               "string_value": "istio-ingressgateway.istio-system.svc.cluster.local"
              }
             }
            },
            "mixer_attributes": {
             "attributes": {
              "destination.service.uid": {
               "string_value": "istio://istio-system/services/istio-ingressgateway"
              },
              "destination.service.host": {
               "string_value": "istio-ingressgateway.istio-system.svc.cluster.local"
              },
              "destination.service.namespace": {
               "string_value": "istio-system"
              },
              "destination.service.name": {
               "string_value": "istio-ingressgateway"
              }
             }
            }
           }
          }
         }
        ]
       }
      ],
      "validate_clusters": false
     },
     "last_updated": "2018-11-13T15:53:05.912Z"
    },
    {
     "version_info": "2018-11-13T14:36:19Z/12",
     "route_config": {
      "name": "15010",
      "virtual_hosts": [
       {
        "name": "istio-pilot.istio-system.svc.cluster.local:15010",
        "domains": [
         "istio-pilot.istio-system.svc.cluster.local",
         "istio-pilot.istio-system.svc.cluster.local:15010",
         "istio-pilot.istio-system",
         "istio-pilot.istio-system:15010",
         "istio-pilot.istio-system.svc.cluster",
         "istio-pilot.istio-system.svc.cluster:15010",
         "istio-pilot.istio-system.svc",
         "istio-pilot.istio-system.svc:15010",
         "172.21.245.199",
         "172.21.245.199:15010"
        ],
        "routes": [
         {
          "match": {
           "prefix": "/"
          },
          "route": {
           "cluster": "outbound|15010||istio-pilot.istio-system.svc.cluster.local",
           "timeout": "0s",
           "max_grpc_timeout": "0s"
          },
          "decorator": {
           "operation": "istio-pilot.istio-system.svc.cluster.local:15010/*"
          },
          "per_filter_config": {
           "mixer": {
            "mixer_attributes": {
             "attributes": {
              "destination.service.uid": {
               "string_value": "istio://istio-system/services/istio-pilot"
              },
              "destination.service.host": {
               "string_value": "istio-pilot.istio-system.svc.cluster.local"
              },
              "destination.service.namespace": {
               "string_value": "istio-system"
              },
              "destination.service.name": {
               "string_value": "istio-pilot"
              }
             }
            },
            "disable_check_calls": true,
            "forward_attributes": {
             "attributes": {
              "destination.service.uid": {
               "string_value": "istio://istio-system/services/istio-pilot"
              },
              "destination.service.host": {
               "string_value": "istio-pilot.istio-system.svc.cluster.local"
              },
              "destination.service.namespace": {
               "string_value": "istio-system"
              },
              "destination.service.name": {
               "string_value": "istio-pilot"
              }
             }
            }
           }
          }
         }
        ]
       }
      ],
      "validate_clusters": false
     },
     "last_updated": "2018-11-13T15:53:05.912Z"
    },
    {
     "version_info": "2018-11-13T15:48:05Z/24",
     "route_config": {
      "name": "80",
      "virtual_hosts": [
       {
        "name": "*.default:80",
        "domains": [
         "*.default",
         "*.default:80"
        ],
        "routes": [
         {
          "match": {
           "prefix": "/"
          },
          "route": {
           "cluster": "outbound|80||myserver.default.global",
           "host_rewrite": "*.default.global",
           "timeout": "0s",
           "max_grpc_timeout": "0s"
          },
          "decorator": {
           "operation": "myserver.default.global:80/*"
          },
          "per_filter_config": {
           "mixer": {
            "mixer_attributes": {
             "attributes": {
              "destination.service.host": {
               "string_value": "myserver.default.global"
              },
              "destination.service.namespace": {
               "string_value": "default"
              },
              "destination.service.name": {
               "string_value": "myserver.default.global"
              }
             }
            },
            "disable_check_calls": true,
            "forward_attributes": {
             "attributes": {
              "destination.service.host": {
               "string_value": "myserver.default.global"
              },
              "destination.service.namespace": {
               "string_value": "default"
              },
              "destination.service.name": {
               "string_value": "myserver.default.global"
              }
             }
            }
           }
          }
         }
        ]
       },
       {
        "name": "headers.default.svc.cluster.local:80",
        "domains": [
         "headers.default.svc.cluster.local",
         "headers.default.svc.cluster.local:80",
         "headers",
         "headers:80",
         "headers.default.svc.cluster",
         "headers.default.svc.cluster:80",
         "headers.default.svc",
         "headers.default.svc:80",
         "headers.default",
         "headers.default:80",
         "172.21.241.53",
         "172.21.241.53:80"
        ],
        "routes": [
         {
          "match": {
           "prefix": "/"
          },
          "route": {
           "cluster": "outbound|80||headers.default.svc.cluster.local",
           "timeout": "0s",
           "max_grpc_timeout": "0s"
          },
          "decorator": {
           "operation": "headers.default.svc.cluster.local:80/*"
          },
          "per_filter_config": {
           "mixer": {
            "mixer_attributes": {
             "attributes": {
              "destination.service.host": {
               "string_value": "headers.default.svc.cluster.local"
              },
              "destination.service.uid": {
               "string_value": "istio://default/services/headers"
              },
              "destination.service.namespace": {
               "string_value": "default"
              },
              "destination.service.name": {
               "string_value": "headers"
              }
             }
            },
            "disable_check_calls": true,
            "forward_attributes": {
             "attributes": {
              "destination.service.name": {
               "string_value": "headers"
              },
              "destination.service.namespace": {
               "string_value": "default"
              },
              "destination.service.host": {
               "string_value": "headers.default.svc.cluster.local"
              },
              "destination.service.uid": {
               "string_value": "istio://default/services/headers"
              }
             }
            }
           }
          }
         }
        ]
       },
       {
        "name": "istio-egressgateway.istio-system.svc.cluster.local:80",
        "domains": [
         "istio-egressgateway.istio-system.svc.cluster.local",
         "istio-egressgateway.istio-system.svc.cluster.local:80",
         "istio-egressgateway.istio-system",
         "istio-egressgateway.istio-system:80",
         "istio-egressgateway.istio-system.svc.cluster",
         "istio-egressgateway.istio-system.svc.cluster:80",
         "istio-egressgateway.istio-system.svc",
         "istio-egressgateway.istio-system.svc:80",
         "172.21.129.203",
         "172.21.129.203:80"
        ],
        "routes": [
         {
          "match": {
           "prefix": "/"
          },
          "route": {
           "cluster": "outbound|80||istio-egressgateway.istio-system.svc.cluster.local",
           "timeout": "0s",
           "max_grpc_timeout": "0s"
          },
          "decorator": {
           "operation": "istio-egressgateway.istio-system.svc.cluster.local:80/*"
          },
          "per_filter_config": {
           "mixer": {
            "forward_attributes": {
             "attributes": {
              "destination.service.namespace": {
               "string_value": "istio-system"
              },
              "destination.service.name": {
               "string_value": "istio-egressgateway"
              },
              "destination.service.host": {
               "string_value": "istio-egressgateway.istio-system.svc.cluster.local"
              },
              "destination.service.uid": {
               "string_value": "istio://istio-system/services/istio-egressgateway"
              }
             }
            },
            "mixer_attributes": {
             "attributes": {
              "destination.service.namespace": {
               "string_value": "istio-system"
              },
              "destination.service.name": {
               "string_value": "istio-egressgateway"
              },
              "destination.service.host": {
               "string_value": "istio-egressgateway.istio-system.svc.cluster.local"
              },
              "destination.service.uid": {
               "string_value": "istio://istio-system/services/istio-egressgateway"
              }
             }
            },
            "disable_check_calls": true
           }
          }
         }
        ]
       },
       {
        "name": "istio-ingressgateway.istio-system.svc.cluster.local:80",
        "domains": [
         "istio-ingressgateway.istio-system.svc.cluster.local",
         "istio-ingressgateway.istio-system.svc.cluster.local:80",
         "istio-ingressgateway.istio-system",
         "istio-ingressgateway.istio-system:80",
         "istio-ingressgateway.istio-system.svc.cluster",
         "istio-ingressgateway.istio-system.svc.cluster:80",
         "istio-ingressgateway.istio-system.svc",
         "istio-ingressgateway.istio-system.svc:80",
         "172.21.179.14",
         "172.21.179.14:80"
        ],
        "routes": [
         {
          "match": {
           "prefix": "/"
          },
          "route": {
           "cluster": "outbound|80||istio-ingressgateway.istio-system.svc.cluster.local",
           "timeout": "0s",
           "max_grpc_timeout": "0s"
          },
          "decorator": {
           "operation": "istio-ingressgateway.istio-system.svc.cluster.local:80/*"
          },
          "per_filter_config": {
           "mixer": {
            "disable_check_calls": true,
            "forward_attributes": {
             "attributes": {
              "destination.service.host": {
               "string_value": "istio-ingressgateway.istio-system.svc.cluster.local"
              },
              "destination.service.uid": {
               "string_value": "istio://istio-system/services/istio-ingressgateway"
              },
              "destination.service.namespace": {
               "string_value": "istio-system"
              },
              "destination.service.name": {
               "string_value": "istio-ingressgateway"
              }
             }
            },
            "mixer_attributes": {
             "attributes": {
              "destination.service.namespace": {
               "string_value": "istio-system"
              },
              "destination.service.name": {
               "string_value": "istio-ingressgateway"
              },
              "destination.service.host": {
               "string_value": "istio-ingressgateway.istio-system.svc.cluster.local"
              },
              "destination.service.uid": {
               "string_value": "istio://istio-system/services/istio-ingressgateway"
              }
             }
            }
           }
          }
         }
        ]
       },
       {
        "name": "myclient.default.svc.cluster.local:80",
        "domains": [
         "myclient.default.svc.cluster.local",
         "myclient.default.svc.cluster.local:80",
         "myclient",
         "myclient:80",
         "myclient.default.svc.cluster",
         "myclient.default.svc.cluster:80",
         "myclient.default.svc",
         "myclient.default.svc:80",
         "myclient.default",
         "myclient.default:80",
         "172.21.223.247",
         "172.21.223.247:80"
        ],
        "routes": [
         {
          "match": {
           "prefix": "/"
          },
          "route": {
           "cluster": "outbound|80||myclient.default.svc.cluster.local",
           "timeout": "0s",
           "max_grpc_timeout": "0s"
          },
          "decorator": {
           "operation": "myclient.default.svc.cluster.local:80/*"
          },
          "per_filter_config": {
           "mixer": {
            "forward_attributes": {
             "attributes": {
              "destination.service.host": {
               "string_value": "myclient.default.svc.cluster.local"
              },
              "destination.service.uid": {
               "string_value": "istio://default/services/myclient"
              },
              "destination.service.namespace": {
               "string_value": "default"
              },
              "destination.service.name": {
               "string_value": "myclient"
              }
             }
            },
            "mixer_attributes": {
             "attributes": {
              "destination.service.uid": {
               "string_value": "istio://default/services/myclient"
              },
              "destination.service.host": {
               "string_value": "myclient.default.svc.cluster.local"
              },
              "destination.service.namespace": {
               "string_value": "default"
              },
              "destination.service.name": {
               "string_value": "myclient"
              }
             }
            },
            "disable_check_calls": true
           }
          }
         }
        ]
       },
       {
        "name": "myserver.default.global:80",
        "domains": [
         "myserver.default.global",
         "myserver.default.global:80",
         "127.255.0.3",
         "127.255.0.3:80"
        ],
        "routes": [
         {
          "match": {
           "prefix": "/"
          },
          "route": {
           "cluster": "outbound|80||myserver.default.global",
           "host_rewrite": "myserver.default.global",
           "timeout": "0s",
           "max_grpc_timeout": "0s"
          },
          "decorator": {
           "operation": "myserver.default.global:80/*"
          },
          "per_filter_config": {
           "mixer": {
            "forward_attributes": {
             "attributes": {
              "destination.service.name": {
               "string_value": "myserver.default.global"
              },
              "destination.service.namespace": {
               "string_value": "default"
              },
              "destination.service.host": {
               "string_value": "myserver.default.global"
              }
             }
            },
            "mixer_attributes": {
             "attributes": {
              "destination.service.host": {
               "string_value": "myserver.default.global"
              },
              "destination.service.namespace": {
               "string_value": "default"
              },
              "destination.service.name": {
               "string_value": "myserver.default.global"
              }
             }
            },
            "disable_check_calls": true
           }
          }
         }
        ]
       },
       {
        "name": "myserver.default:80",
        "domains": [
         "myserver.default",
         "myserver.default:80"
        ],
        "routes": [
         {
          "match": {
           "prefix": "/"
          },
          "route": {
           "cluster": "outbound|80||myserver.default.global",
           "host_rewrite": "myserver.default.global",
           "timeout": "0s",
           "max_grpc_timeout": "0s"
          },
          "decorator": {
           "operation": "myserver.default.global:80/*"
          },
          "per_filter_config": {
           "mixer": {
            "forward_attributes": {
             "attributes": {
              "destination.service.namespace": {
               "string_value": "default"
              },
              "destination.service.name": {
               "string_value": "myserver.default.global"
              },
              "destination.service.host": {
               "string_value": "myserver.default.global"
              }
             }
            },
            "mixer_attributes": {
             "attributes": {
              "destination.service.namespace": {
               "string_value": "default"
              },
              "destination.service.name": {
               "string_value": "myserver.default.global"
              },
              "destination.service.host": {
               "string_value": "myserver.default.global"
              }
             }
            },
            "disable_check_calls": true
           }
          }
         }
        ]
       }
      ],
      "validate_clusters": false
     },
     "last_updated": "2018-11-13T15:53:05.911Z"
    },
    {
     "version_info": "2018-11-13T14:36:19Z/12",
     "route_config": {
      "name": "9901",
      "virtual_hosts": [
       {
        "name": "istio-galley.istio-system.svc.cluster.local:9901",
        "domains": [
         "istio-galley.istio-system.svc.cluster.local",
         "istio-galley.istio-system.svc.cluster.local:9901",
         "istio-galley.istio-system",
         "istio-galley.istio-system:9901",
         "istio-galley.istio-system.svc.cluster",
         "istio-galley.istio-system.svc.cluster:9901",
         "istio-galley.istio-system.svc",
         "istio-galley.istio-system.svc:9901",
         "172.21.118.255",
         "172.21.118.255:9901"
        ],
        "routes": [
         {
          "match": {
           "prefix": "/"
          },
          "route": {
           "cluster": "outbound|9901||istio-galley.istio-system.svc.cluster.local",
           "timeout": "0s",
           "max_grpc_timeout": "0s"
          },
          "decorator": {
           "operation": "istio-galley.istio-system.svc.cluster.local:9901/*"
          },
          "per_filter_config": {
           "mixer": {
            "forward_attributes": {
             "attributes": {
              "destination.service.name": {
               "string_value": "istio-galley"
              },
              "destination.service.namespace": {
               "string_value": "istio-system"
              },
              "destination.service.host": {
               "string_value": "istio-galley.istio-system.svc.cluster.local"
              },
              "destination.service.uid": {
               "string_value": "istio://istio-system/services/istio-galley"
              }
             }
            },
            "mixer_attributes": {
             "attributes": {
              "destination.service.name": {
               "string_value": "istio-galley"
              },
              "destination.service.namespace": {
               "string_value": "istio-system"
              },
              "destination.service.host": {
               "string_value": "istio-galley.istio-system.svc.cluster.local"
              },
              "destination.service.uid": {
               "string_value": "istio://istio-system/services/istio-galley"
              }
             }
            },
            "disable_check_calls": true
           }
          }
         }
        ]
       }
      ],
      "validate_clusters": false
     },
     "last_updated": "2018-11-13T15:53:05.911Z"
    },
    {
     "version_info": "2018-11-13T14:36:19Z/12",
     "route_config": {
      "name": "8060",
      "virtual_hosts": [
       {
        "name": "istio-citadel.istio-system.svc.cluster.local:8060",
        "domains": [
         "istio-citadel.istio-system.svc.cluster.local",
         "istio-citadel.istio-system.svc.cluster.local:8060",
         "istio-citadel.istio-system",
         "istio-citadel.istio-system:8060",
         "istio-citadel.istio-system.svc.cluster",
         "istio-citadel.istio-system.svc.cluster:8060",
         "istio-citadel.istio-system.svc",
         "istio-citadel.istio-system.svc:8060",
         "172.21.23.154",
         "172.21.23.154:8060"
        ],
        "routes": [
         {
          "match": {
           "prefix": "/"
          },
          "route": {
           "cluster": "outbound|8060||istio-citadel.istio-system.svc.cluster.local",
           "timeout": "0s",
           "max_grpc_timeout": "0s"
          },
          "decorator": {
           "operation": "istio-citadel.istio-system.svc.cluster.local:8060/*"
          },
          "per_filter_config": {
           "mixer": {
            "forward_attributes": {
             "attributes": {
              "destination.service.namespace": {
               "string_value": "istio-system"
              },
              "destination.service.name": {
               "string_value": "istio-citadel"
              },
              "destination.service.uid": {
               "string_value": "istio://istio-system/services/istio-citadel"
              },
              "destination.service.host": {
               "string_value": "istio-citadel.istio-system.svc.cluster.local"
              }
             }
            },
            "mixer_attributes": {
             "attributes": {
              "destination.service.namespace": {
               "string_value": "istio-system"
              },
              "destination.service.name": {
               "string_value": "istio-citadel"
              },
              "destination.service.uid": {
               "string_value": "istio://istio-system/services/istio-citadel"
              },
              "destination.service.host": {
               "string_value": "istio-citadel.istio-system.svc.cluster.local"
              }
             }
            },
            "disable_check_calls": true
           }
          }
         }
        ]
       }
      ],
      "validate_clusters": false
     },
     "last_updated": "2018-11-13T15:53:05.912Z"
    },
    {
     "version_info": "2018-11-13T14:36:19Z/12",
     "route_config": {
      "name": "15030",
      "virtual_hosts": [
       {
        "name": "istio-ingressgateway.istio-system.svc.cluster.local:15030",
        "domains": [
         "istio-ingressgateway.istio-system.svc.cluster.local",
         "istio-ingressgateway.istio-system.svc.cluster.local:15030",
         "istio-ingressgateway.istio-system",
         "istio-ingressgateway.istio-system:15030",
         "istio-ingressgateway.istio-system.svc.cluster",
         "istio-ingressgateway.istio-system.svc.cluster:15030",
         "istio-ingressgateway.istio-system.svc",
         "istio-ingressgateway.istio-system.svc:15030",
         "172.21.179.14",
         "172.21.179.14:15030"
        ],
        "routes": [
         {
          "match": {
           "prefix": "/"
          },
          "route": {
           "cluster": "outbound|15030||istio-ingressgateway.istio-system.svc.cluster.local",
           "timeout": "0s",
           "max_grpc_timeout": "0s"
          },
          "decorator": {
           "operation": "istio-ingressgateway.istio-system.svc.cluster.local:15030/*"
          },
          "per_filter_config": {
           "mixer": {
            "forward_attributes": {
             "attributes": {
              "destination.service.uid": {
               "string_value": "istio://istio-system/services/istio-ingressgateway"
              },
              "destination.service.host": {
               "string_value": "istio-ingressgateway.istio-system.svc.cluster.local"
              },
              "destination.service.namespace": {
               "string_value": "istio-system"
              },
              "destination.service.name": {
               "string_value": "istio-ingressgateway"
              }
             }
            },
            "mixer_attributes": {
             "attributes": {
              "destination.service.host": {
               "string_value": "istio-ingressgateway.istio-system.svc.cluster.local"
              },
              "destination.service.uid": {
               "string_value": "istio://istio-system/services/istio-ingressgateway"
              },
              "destination.service.name": {
               "string_value": "istio-ingressgateway"
              },
              "destination.service.namespace": {
               "string_value": "istio-system"
              }
             }
            },
            "disable_check_calls": true
           }
          }
         }
        ]
       }
      ],
      "validate_clusters": false
     },
     "last_updated": "2018-11-13T15:53:05.911Z"
    },
    {
     "version_info": "2018-11-13T14:36:19Z/12",
     "route_config": {
      "name": "15004",
      "virtual_hosts": [
       {
        "name": "istio-policy.istio-system.svc.cluster.local:15004",
        "domains": [
         "istio-policy.istio-system.svc.cluster.local",
         "istio-policy.istio-system.svc.cluster.local:15004",
         "istio-policy.istio-system",
         "istio-policy.istio-system:15004",
         "istio-policy.istio-system.svc.cluster",
         "istio-policy.istio-system.svc.cluster:15004",
         "istio-policy.istio-system.svc",
         "istio-policy.istio-system.svc:15004",
         "172.21.66.180",
         "172.21.66.180:15004"
        ],
        "routes": [
         {
          "match": {
           "prefix": "/"
          },
          "route": {
           "cluster": "outbound|15004||istio-policy.istio-system.svc.cluster.local",
           "timeout": "0s",
           "max_grpc_timeout": "0s"
          },
          "decorator": {
           "operation": "istio-policy.istio-system.svc.cluster.local:15004/*"
          },
          "per_filter_config": {
           "mixer": {
            "disable_check_calls": true,
            "forward_attributes": {
             "attributes": {
              "destination.service.uid": {
               "string_value": "istio://istio-system/services/istio-policy"
              },
              "destination.service.host": {
               "string_value": "istio-policy.istio-system.svc.cluster.local"
              },
              "destination.service.namespace": {
               "string_value": "istio-system"
              },
              "destination.service.name": {
               "string_value": "istio-policy"
              }
             }
            },
            "mixer_attributes": {
             "attributes": {
              "destination.service.host": {
               "string_value": "istio-policy.istio-system.svc.cluster.local"
              },
              "destination.service.uid": {
               "string_value": "istio://istio-system/services/istio-policy"
              },
              "destination.service.namespace": {
               "string_value": "istio-system"
              },
              "destination.service.name": {
               "string_value": "istio-policy"
              }
             }
            }
           }
          }
         }
        ]
       },
       {
        "name": "istio-telemetry.istio-system.svc.cluster.local:15004",
        "domains": [
         "istio-telemetry.istio-system.svc.cluster.local",
         "istio-telemetry.istio-system.svc.cluster.local:15004",
         "istio-telemetry.istio-system",
         "istio-telemetry.istio-system:15004",
         "istio-telemetry.istio-system.svc.cluster",
         "istio-telemetry.istio-system.svc.cluster:15004",
         "istio-telemetry.istio-system.svc",
         "istio-telemetry.istio-system.svc:15004",
         "172.21.250.55",
         "172.21.250.55:15004"
        ],
        "routes": [
         {
          "match": {
           "prefix": "/"
          },
          "route": {
           "cluster": "outbound|15004||istio-telemetry.istio-system.svc.cluster.local",
           "timeout": "0s",
           "max_grpc_timeout": "0s"
          },
          "decorator": {
           "operation": "istio-telemetry.istio-system.svc.cluster.local:15004/*"
          },
          "per_filter_config": {
           "mixer": {
            "forward_attributes": {
             "attributes": {
              "destination.service.namespace": {
               "string_value": "istio-system"
              },
              "destination.service.name": {
               "string_value": "istio-telemetry"
              },
              "destination.service.uid": {
               "string_value": "istio://istio-system/services/istio-telemetry"
              },
              "destination.service.host": {
               "string_value": "istio-telemetry.istio-system.svc.cluster.local"
              }
             }
            },
            "mixer_attributes": {
             "attributes": {
              "destination.service.uid": {
               "string_value": "istio://istio-system/services/istio-telemetry"
              },
              "destination.service.host": {
               "string_value": "istio-telemetry.istio-system.svc.cluster.local"
              },
              "destination.service.namespace": {
               "string_value": "istio-system"
              },
              "destination.service.name": {
               "string_value": "istio-telemetry"
              }
             }
            },
            "disable_check_calls": true
           }
          }
         }
        ]
       }
      ],
      "validate_clusters": false
     },
     "last_updated": "2018-11-13T15:53:05.912Z"
    },
    {
     "version_info": "2018-11-13T14:36:19Z/12",
     "route_config": {
      "name": "9093",
      "virtual_hosts": [
       {
        "name": "istio-citadel.istio-system.svc.cluster.local:9093",
        "domains": [
         "istio-citadel.istio-system.svc.cluster.local",
         "istio-citadel.istio-system.svc.cluster.local:9093",
         "istio-citadel.istio-system",
         "istio-citadel.istio-system:9093",
         "istio-citadel.istio-system.svc.cluster",
         "istio-citadel.istio-system.svc.cluster:9093",
         "istio-citadel.istio-system.svc",
         "istio-citadel.istio-system.svc:9093",
         "172.21.23.154",
         "172.21.23.154:9093"
        ],
        "routes": [
         {
          "match": {
           "prefix": "/"
          },
          "route": {
           "cluster": "outbound|9093||istio-citadel.istio-system.svc.cluster.local",
           "timeout": "0s",
           "max_grpc_timeout": "0s"
          },
          "decorator": {
           "operation": "istio-citadel.istio-system.svc.cluster.local:9093/*"
          },
          "per_filter_config": {
           "mixer": {
            "disable_check_calls": true,
            "forward_attributes": {
             "attributes": {
              "destination.service.namespace": {
               "string_value": "istio-system"
              },
              "destination.service.name": {
               "string_value": "istio-citadel"
              },
              "destination.service.uid": {
               "string_value": "istio://istio-system/services/istio-citadel"
              },
              "destination.service.host": {
               "string_value": "istio-citadel.istio-system.svc.cluster.local"
              }
             }
            },
            "mixer_attributes": {
             "attributes": {
              "destination.service.namespace": {
               "string_value": "istio-system"
              },
              "destination.service.name": {
               "string_value": "istio-citadel"
              },
              "destination.service.host": {
               "string_value": "istio-citadel.istio-system.svc.cluster.local"
              },
              "destination.service.uid": {
               "string_value": "istio://istio-system/services/istio-citadel"
              }
             }
            }
           }
          }
         }
        ]
       },
       {
        "name": "istio-galley.istio-system.svc.cluster.local:9093",
        "domains": [
         "istio-galley.istio-system.svc.cluster.local",
         "istio-galley.istio-system.svc.cluster.local:9093",
         "istio-galley.istio-system",
         "istio-galley.istio-system:9093",
         "istio-galley.istio-system.svc.cluster",
         "istio-galley.istio-system.svc.cluster:9093",
         "istio-galley.istio-system.svc",
         "istio-galley.istio-system.svc:9093",
         "172.21.118.255",
         "172.21.118.255:9093"
        ],
        "routes": [
         {
          "match": {
           "prefix": "/"
          },
          "route": {
           "cluster": "outbound|9093||istio-galley.istio-system.svc.cluster.local",
           "timeout": "0s",
           "max_grpc_timeout": "0s"
          },
          "decorator": {
           "operation": "istio-galley.istio-system.svc.cluster.local:9093/*"
          },
          "per_filter_config": {
           "mixer": {
            "forward_attributes": {
             "attributes": {
              "destination.service.name": {
               "string_value": "istio-galley"
              },
              "destination.service.namespace": {
               "string_value": "istio-system"
              },
              "destination.service.host": {
               "string_value": "istio-galley.istio-system.svc.cluster.local"
              },
              "destination.service.uid": {
               "string_value": "istio://istio-system/services/istio-galley"
              }
             }
            },
            "mixer_attributes": {
             "attributes": {
              "destination.service.host": {
               "string_value": "istio-galley.istio-system.svc.cluster.local"
              },
              "destination.service.uid": {
               "string_value": "istio://istio-system/services/istio-galley"
              },
              "destination.service.namespace": {
               "string_value": "istio-system"
              },
              "destination.service.name": {
               "string_value": "istio-galley"
              }
             }
            },
            "disable_check_calls": true
           }
          }
         }
        ]
       },
       {
        "name": "istio-pilot.istio-system.svc.cluster.local:9093",
        "domains": [
         "istio-pilot.istio-system.svc.cluster.local",
         "istio-pilot.istio-system.svc.cluster.local:9093",
         "istio-pilot.istio-system",
         "istio-pilot.istio-system:9093",
         "istio-pilot.istio-system.svc.cluster",
         "istio-pilot.istio-system.svc.cluster:9093",
         "istio-pilot.istio-system.svc",
         "istio-pilot.istio-system.svc:9093",
         "172.21.245.199",
         "172.21.245.199:9093"
        ],
        "routes": [
         {
          "match": {
           "prefix": "/"
          },
          "route": {
           "cluster": "outbound|9093||istio-pilot.istio-system.svc.cluster.local",
           "timeout": "0s",
           "max_grpc_timeout": "0s"
          },
          "decorator": {
           "operation": "istio-pilot.istio-system.svc.cluster.local:9093/*"
          },
          "per_filter_config": {
           "mixer": {
            "mixer_attributes": {
             "attributes": {
              "destination.service.host": {
               "string_value": "istio-pilot.istio-system.svc.cluster.local"
              },
              "destination.service.uid": {
               "string_value": "istio://istio-system/services/istio-pilot"
              },
              "destination.service.namespace": {
               "string_value": "istio-system"
              },
              "destination.service.name": {
               "string_value": "istio-pilot"
              }
             }
            },
            "disable_check_calls": true,
            "forward_attributes": {
             "attributes": {
              "destination.service.namespace": {
               "string_value": "istio-system"
              },
              "destination.service.name": {
               "string_value": "istio-pilot"
              },
              "destination.service.uid": {
               "string_value": "istio://istio-system/services/istio-pilot"
              },
              "destination.service.host": {
               "string_value": "istio-pilot.istio-system.svc.cluster.local"
              }
             }
            }
           }
          }
         }
        ]
       },
       {
        "name": "istio-policy.istio-system.svc.cluster.local:9093",
        "domains": [
         "istio-policy.istio-system.svc.cluster.local",
         "istio-policy.istio-system.svc.cluster.local:9093",
         "istio-policy.istio-system",
         "istio-policy.istio-system:9093",
         "istio-policy.istio-system.svc.cluster",
         "istio-policy.istio-system.svc.cluster:9093",
         "istio-policy.istio-system.svc",
         "istio-policy.istio-system.svc:9093",
         "172.21.66.180",
         "172.21.66.180:9093"
        ],
        "routes": [
         {
          "match": {
           "prefix": "/"
          },
          "route": {
           "cluster": "outbound|9093||istio-policy.istio-system.svc.cluster.local",
           "timeout": "0s",
           "max_grpc_timeout": "0s"
          },
          "decorator": {
           "operation": "istio-policy.istio-system.svc.cluster.local:9093/*"
          },
          "per_filter_config": {
           "mixer": {
            "disable_check_calls": true,
            "forward_attributes": {
             "attributes": {
              "destination.service.uid": {
               "string_value": "istio://istio-system/services/istio-policy"
              },
              "destination.service.host": {
               "string_value": "istio-policy.istio-system.svc.cluster.local"
              },
              "destination.service.namespace": {
               "string_value": "istio-system"
              },
              "destination.service.name": {
               "string_value": "istio-policy"
              }
             }
            },
            "mixer_attributes": {
             "attributes": {
              "destination.service.namespace": {
               "string_value": "istio-system"
              },
              "destination.service.name": {
               "string_value": "istio-policy"
              },
              "destination.service.host": {
               "string_value": "istio-policy.istio-system.svc.cluster.local"
              },
              "destination.service.uid": {
               "string_value": "istio://istio-system/services/istio-policy"
              }
             }
            }
           }
          }
         }
        ]
       },
       {
        "name": "istio-telemetry.istio-system.svc.cluster.local:9093",
        "domains": [
         "istio-telemetry.istio-system.svc.cluster.local",
         "istio-telemetry.istio-system.svc.cluster.local:9093",
         "istio-telemetry.istio-system",
         "istio-telemetry.istio-system:9093",
         "istio-telemetry.istio-system.svc.cluster",
         "istio-telemetry.istio-system.svc.cluster:9093",
         "istio-telemetry.istio-system.svc",
         "istio-telemetry.istio-system.svc:9093",
         "172.21.250.55",
         "172.21.250.55:9093"
        ],
        "routes": [
         {
          "match": {
           "prefix": "/"
          },
          "route": {
           "cluster": "outbound|9093||istio-telemetry.istio-system.svc.cluster.local",
           "timeout": "0s",
           "max_grpc_timeout": "0s"
          },
          "decorator": {
           "operation": "istio-telemetry.istio-system.svc.cluster.local:9093/*"
          },
          "per_filter_config": {
           "mixer": {
            "forward_attributes": {
             "attributes": {
              "destination.service.namespace": {
               "string_value": "istio-system"
              },
              "destination.service.name": {
               "string_value": "istio-telemetry"
              },
              "destination.service.host": {
               "string_value": "istio-telemetry.istio-system.svc.cluster.local"
              },
              "destination.service.uid": {
               "string_value": "istio://istio-system/services/istio-telemetry"
              }
             }
            },
            "mixer_attributes": {
             "attributes": {
              "destination.service.host": {
               "string_value": "istio-telemetry.istio-system.svc.cluster.local"
              },
              "destination.service.uid": {
               "string_value": "istio://istio-system/services/istio-telemetry"
              },
              "destination.service.namespace": {
               "string_value": "istio-system"
              },
              "destination.service.name": {
               "string_value": "istio-telemetry"
              }
             }
            },
            "disable_check_calls": true
           }
          }
         }
        ]
       }
      ],
      "validate_clusters": false
     },
     "last_updated": "2018-11-13T15:53:05.912Z"
    },
    {
     "version_info": "2018-11-13T14:36:19Z/12",
     "route_config": {
      "name": "9091",
      "virtual_hosts": [
       {
        "name": "istio-policy.istio-system.svc.cluster.local:9091",
        "domains": [
         "istio-policy.istio-system.svc.cluster.local",
         "istio-policy.istio-system.svc.cluster.local:9091",
         "istio-policy.istio-system",
         "istio-policy.istio-system:9091",
         "istio-policy.istio-system.svc.cluster",
         "istio-policy.istio-system.svc.cluster:9091",
         "istio-policy.istio-system.svc",
         "istio-policy.istio-system.svc:9091",
         "172.21.66.180",
         "172.21.66.180:9091"
        ],
        "routes": [
         {
          "match": {
           "prefix": "/"
          },
          "route": {
           "cluster": "outbound|9091||istio-policy.istio-system.svc.cluster.local",
           "timeout": "0s",
           "max_grpc_timeout": "0s"
          },
          "decorator": {
           "operation": "istio-policy.istio-system.svc.cluster.local:9091/*"
          },
          "per_filter_config": {
           "mixer": {
            "mixer_attributes": {
             "attributes": {
              "destination.service.uid": {
               "string_value": "istio://istio-system/services/istio-policy"
              },
              "destination.service.host": {
               "string_value": "istio-policy.istio-system.svc.cluster.local"
              },
              "destination.service.namespace": {
               "string_value": "istio-system"
              },
              "destination.service.name": {
               "string_value": "istio-policy"
              }
             }
            },
            "disable_check_calls": true,
            "forward_attributes": {
             "attributes": {
              "destination.service.uid": {
               "string_value": "istio://istio-system/services/istio-policy"
              },
              "destination.service.host": {
               "string_value": "istio-policy.istio-system.svc.cluster.local"
              },
              "destination.service.namespace": {
               "string_value": "istio-system"
              },
              "destination.service.name": {
               "string_value": "istio-policy"
              }
             }
            }
           }
          }
         }
        ]
       },
       {
        "name": "istio-telemetry.istio-system.svc.cluster.local:9091",
        "domains": [
         "istio-telemetry.istio-system.svc.cluster.local",
         "istio-telemetry.istio-system.svc.cluster.local:9091",
         "istio-telemetry.istio-system",
         "istio-telemetry.istio-system:9091",
         "istio-telemetry.istio-system.svc.cluster",
         "istio-telemetry.istio-system.svc.cluster:9091",
         "istio-telemetry.istio-system.svc",
         "istio-telemetry.istio-system.svc:9091",
         "172.21.250.55",
         "172.21.250.55:9091"
        ],
        "routes": [
         {
          "match": {
           "prefix": "/"
          },
          "route": {
           "cluster": "outbound|9091||istio-telemetry.istio-system.svc.cluster.local",
           "timeout": "0s",
           "max_grpc_timeout": "0s"
          },
          "decorator": {
           "operation": "istio-telemetry.istio-system.svc.cluster.local:9091/*"
          },
          "per_filter_config": {
           "mixer": {
            "mixer_attributes": {
             "attributes": {
              "destination.service.namespace": {
               "string_value": "istio-system"
              },
              "destination.service.name": {
               "string_value": "istio-telemetry"
              },
              "destination.service.host": {
               "string_value": "istio-telemetry.istio-system.svc.cluster.local"
              },
              "destination.service.uid": {
               "string_value": "istio://istio-system/services/istio-telemetry"
              }
             }
            },
            "disable_check_calls": true,
            "forward_attributes": {
             "attributes": {
              "destination.service.uid": {
               "string_value": "istio://istio-system/services/istio-telemetry"
              },
              "destination.service.host": {
               "string_value": "istio-telemetry.istio-system.svc.cluster.local"
              },
              "destination.service.namespace": {
               "string_value": "istio-system"
              },
              "destination.service.name": {
               "string_value": "istio-telemetry"
              }
             }
            }
           }
          }
         }
        ]
       }
      ],
      "validate_clusters": false
     },
     "last_updated": "2018-11-13T15:53:05.912Z"
    },
    {
     "version_info": "2018-11-13T14:36:19Z/12",
     "route_config": {
      "name": "9090",
      "virtual_hosts": [
       {
        "name": "prometheus.istio-system.svc.cluster.local:9090",
        "domains": [
         "prometheus.istio-system.svc.cluster.local",
         "prometheus.istio-system.svc.cluster.local:9090",
         "prometheus.istio-system",
         "prometheus.istio-system:9090",
         "prometheus.istio-system.svc.cluster",
         "prometheus.istio-system.svc.cluster:9090",
         "prometheus.istio-system.svc",
         "prometheus.istio-system.svc:9090",
         "172.21.141.141",
         "172.21.141.141:9090"
        ],
        "routes": [
         {
          "match": {
           "prefix": "/"
          },
          "route": {
           "cluster": "outbound|9090||prometheus.istio-system.svc.cluster.local",
           "timeout": "0s",
           "max_grpc_timeout": "0s"
          },
          "decorator": {
           "operation": "prometheus.istio-system.svc.cluster.local:9090/*"
          },
          "per_filter_config": {
           "mixer": {
            "forward_attributes": {
             "attributes": {
              "destination.service.host": {
               "string_value": "prometheus.istio-system.svc.cluster.local"
              },
              "destination.service.uid": {
               "string_value": "istio://istio-system/services/prometheus"
              },
              "destination.service.namespace": {
               "string_value": "istio-system"
              },
              "destination.service.name": {
               "string_value": "prometheus"
              }
             }
            },
            "mixer_attributes": {
             "attributes": {
              "destination.service.uid": {
               "string_value": "istio://istio-system/services/prometheus"
              },
              "destination.service.host": {
               "string_value": "prometheus.istio-system.svc.cluster.local"
              },
              "destination.service.namespace": {
               "string_value": "istio-system"
              },
              "destination.service.name": {
               "string_value": "prometheus"
              }
             }
            },
            "disable_check_calls": true
           }
          }
         }
        ]
       }
      ],
      "validate_clusters": false
     },
     "last_updated": "2018-11-13T15:53:05.911Z"
    }
   ]
  }
 ]
}
